CI images update

--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-05 04:14:31
+lastsearch = 2024-08-05 05:34:31
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -54,7 +54,7 @@ url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-ra
 [books.google.com]
 match = -38.1%%
 title = A Dictionary of Music and Musicians
-url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EmGNYv8&sig=ACfU3U2lqMaBBnhnp9iP-RbRt94KyNdhrw&hl=en&sa=X&ved=2ahUKEwiUpJrfoNyHAxXgEkQIHWAWJ9UQ6AF6BAgdEAM
+url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EmHH4v8&sig=ACfU3U1kiIAK7jBsKgjY2En2hKjho9dbew&hl=en&sa=X&ved=2ahUKEwi87_jPstyHAxUTFlkFHedOHP0Q6AF6BAgbEAM
 
 [www.diepxuan.com]
 match = -81.0%%
