--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-05 05:17:11
+lastsearch = 2024-08-05 05:43:53
 
 [eva.vn]
 match = -163.2%%
@@ -67,9 +67,9 @@ title = 3 loại cây cảnh bỗng dưng nở hoa được xem là kỳ tích
 url = https://danviet.vn/3-loai-cay-canh-bong-dung-no-hoa-duoc-xem-la-ky-tich-bao-hieu-tien-de-ra-tien-20220720162714148.htm
 
 [www.vinmec.com]
-match = -42.1%%
-title = Cây náng hoa trắng có tác dụng gì?
-url = https://www.vinmec.com/vie/bai-viet/cay-nang-hoa-trang-co-tac-dung-gi-vi
+match = -15.8%%
+title = Cây bòng bong chữa bệnh gì?
+url = https://www.vinmec.com/vie/bai-viet/cay-bong-bong-chua-benh-gi-vi
 
 [www.youtube.com]
 match = -105.3%%
@@ -197,9 +197,9 @@ title = 5 cây cảnh bỗng nhiên ra hoa rực rỡ: Điềm báo đang đến
 url = https://cafef.vn/5-cay-canh-bong-nhien-ra-hoa-ruc-ro-diem-bao-dang-den-voi-gia-chu-18824041110181979.chn
 
 [baomoi.com]
-match = -131.6%%
-title = Cây cảnh trồng trong nhà chiêu may rước lộc, sạch bong ...
-url = https://baomoi.com/cay-canh-trong-trong-nha-chieu-may-ruoc-loc-sach-bong-khoi-thuoc-c49567868.epi
+match = -15.8%%
+title = Cây cao bóng cả - Báo Tây Ninh
+url = https://baomoi.com/cay-cao-bong-ca-c49814616.epi
 
 [baobacgiang.vn]
 match = -121.1%%
