--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-05 03:22:39
+lastsearch = 2024-08-05 05:39:02
 
 [www.diepxuan.com]
-match = 35.7%%
-title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+match = 39.3%%
+title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html?srsltid=AfmBOorblGmSCafM0jugm8Fip8oc3oMU0ALlPxabyjzt1Si-4vy6TBVm
 
 [shopee.vn]
 match = -3.6%%
@@ -52,9 +52,9 @@ title = ArmyHaus Chuyên Đồ Phượt, Đồ Du Lịch, Bảo Hộ Moto HÀ ..
 url = https://armyhaus.com/
 
 [www.facebook.com]
-match = 10.7%%
-title = hội lái xe 16 chỗ Hà Nội trao đổi việc
-url = https://www.facebook.com/groups/330360110842692/
+match = -3.6%%
+title = Tour Hội Chợ Triển Lãm Quốc Tế | Hanoi
+url = https://www.facebook.com/tourhoichoquocte/
 
 [vneconomy.vn]
 match = -25.0%%
@@ -242,19 +242,19 @@ title = HR - TUYỂN DỤNG | HR Specialist - Chiêu mộ tại công ty ...
 url = https://m.facebook.com/groups/hrtuyendungcnns/posts/8326183580738949/
 
 [techcombank.com]
-match = 3.6%%
-title = Danh sách mã quay thưởng Chương ...
-url = https://techcombank.com/content/dam/techcombank/public-site/documents/articles/danh-sach-ma-quay-thuong-chuong-trinh-uu-dai-mua-thu-2023-danh-cho-khach-hang-doanh-nghiep-ky-quay-thuong-thang-10-2023-169eadaf43.pdf
+match = -21.4%%
+title = Danh sách mã dự thưởng Chương trình ưu đãi hè 2023
+url = https://techcombank.com/content/dam/techcombank/public-site/documents/articles/danh-sach-ma-quay-thuong-t5-2023-5b8381e9a2.pdf
 
 [www.scribd.com]
-match = -17.9%%
-title = Cap Nhat Tinh Trang 5750 Giam Doc Ha Noi | PDF
-url = https://www.scribd.com/document/336444545/Cap-Nhat-Tinh-Trang-5750-Giam-Doc-Ha-Noi
+match = 19.0%%
+title = Giam Doc Ha Noi | PDF
+url = https://www.scribd.com/document/673940394/giam-doc-ha-noi
 
 [monre.gov.vn]
 match = -4.5%%
 title = Pages - My submissions
-url = https://monre.gov.vn/Pages/Forms/my-sub.aspx?Paged=TRUE&p__ModerationStatus=0&p_SortBehavior=0&p_Created=20220330 16:00:38&p_ID=27357&PageFirstRow=32001&&View={B076333D-EF98-4BE1-B118-CE4331ED8B4F}
+url = https://monre.gov.vn/Pages/Forms/my-sub.aspx?Paged=TRUE&p__ModerationStatus=0&p_SortBehavior=0&p_Created=20220330 15:16:35&p_ID=27356&PageFirstRow=18001&&View={B076333D-EF98-4BE1-B118-CE4331ED8B4F}
 
 [github.com]
 match = -21.4%%
@@ -330,4 +330,19 @@ url = https://hanoionline.vn/video/nhieu-mau-o-to-giam-gia-trong-thang-8-ban-tin
 match = 0.0%%
 title = Hà Nội một chiều xuân
 url = http://vietravel.com/vn/non-nuoc-viet-nam/ha-noi-mot-chieu-xuan-v3370.aspx
+
+[donganh.hanoi.gov.vn]
+match = -35.7%%
+title = Ty do - Hanh ph& Dong Anh, ngay 011 thang 02 nam
+url = https://donganh.hanoi.gov.vn/documents/2385586/5437173/84347561918617142.pdf/1285cf9a-5442-4ba0-8f43-ec4d093886f3
+
+[d1kndcit1zrj97.cloudfront.net]
+match = -39.3%%
+title = danh sách mã dự thưởng chương trình "tân niên đại cát
+url = https://d1kndcit1zrj97.cloudfront.net/uploads/Danh_sach_ma_quay_thuong_T2_2023_ac8625b0e5.pdf
+
+[dulichthanhhoa.com.vn]
+match = 35.7%%
+title = Phan Thiết | Địa danh du lịch
+url = http://dulichthanhhoa.com.vn/Phan-Thiet.html
 
