--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-04 20:28:45
+lastsearch = 2024-08-05 05:33:49
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -200.0%%
-title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
-url = https://www.deutschconnectorstore.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
+match = -253.8%%
+title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
+url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -477,9 +477,9 @@ title = Georgia Rest Areas: Roadside GA Rest Stops | Maps | Facility
 url = https://www.georgiarestareas.com/
 
 [www.sciencedirect.com]
-match = -300.0%%
-title = Highly mobile twin boundaries in seven-layer modulated Ni ...
-url = https://www.sciencedirect.com/science/article/pii/S1359646219306359
+match = -284.6%%
+title = Effect of Ni doping on mechanical properties and phase ...
+url = https://www.sciencedirect.com/science/article/abs/pii/S1005030224001634
 
 [www.cvlga.org]
 match = -138.5%%
