--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-05 04:51:47
+lastsearch = 2024-08-05 05:47:39
 
 [everon.online]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://everonchinhhang.vn/products/bo-ga-chun-chan-freesia-bon-mua
 [everonvn.com.vn]
 match = 28.0%%
 title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
+url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon?srsltid=AfmBOoqL2ceqGnOijLSGlWDfQWRhUQMmalgmYkAbgVweLO1UPyqB-Md6
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
