--- a/images/chieu-cay-ht-120x190/config.ini
+++ b/images/chieu-cay-ht-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-120x190.html
 lastopen = 2024-08-01 18:48:15
 
 [search]
-lastsearch = 2024-08-05 02:29:51
+lastsearch = 2024-08-05 05:46:59
 
 [shopee.vn]
 match = 0.0%%
@@ -12,9 +12,9 @@ title = Chiếu Trúc Tăm HT Loại Bền , Đẹp
 url = https://shopee.vn/Chiếu-Trúc-Tăm-HT-Loại-Bền-Đẹp-i.117037771.1936980907
 
 [www.diepxuan.com]
-match = -14.3%%
-title = HT - Điệp Xuân
-url = https://www.diepxuan.com/ht.html
+match = -10.0%%
+title = Chiếu điều hòa mây 120x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-dieu-hoa-may-120x190.html
 
 [chuyenhangviet.com]
 match = -90.0%%
@@ -43,13 +43,13 @@ url = https://chieutruc.org/chieu-truc-tam-ht-120x190
 
 [thegioidemonline.com]
 match = -5.0%%
-title = Chiếu trúc thanh Hương Trúc 100 x 190cm
-url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-100-190.html
+title = Chiếu trúc thanh Hương Trúc 150 x 190cm
+url = https://thegioidemonline.com/chieu-truc-thanh-huong-truc-1-5-0-1-9-0-cm.html
 
 [www.facebook.com]
-match = -75.0%%
-title = Đệm 24h Thái Bình - Chăn Ga Gối Đệm's post
-url = https://www.facebook.com/story.php/?story_fbid=716670557148181&id=100064157288007
+match = 31.6%%
+title = Chiếu Nhựa Thái Lan
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [muasamcong.mpi.gov.vn:8082]
 match = -25.0%%
