--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-05 04:34:56
+lastsearch = 2024-08-05 05:45:16
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -14,7 +14,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOopP3V5FYaIrrU1Kcbc8k0oLCkUHLibGBJjdiNsCciAlLRPlqTc3
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -81.0%%
@@ -27,9 +27,9 @@ title = Chieu truc thai lan hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=chieu truc thai lan
 
 [chieutrelanlan.com]
-match = -19.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [www.youtube.com]
 match = -147.6%%
