--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-05 03:26:30
+lastsearch = 2024-08-05 05:48:42
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOoqhK3ilvbpsgUfmQo7mnD1tpl2cW2dKCJk1eqp4wCEZx-Us2oRB
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -38.1%%
-title = Everon Quảng Bình Bộ ga phủ EPCARLESS 160x200
-url = https://www.everonqb.com/bo-ga-phu-epcarless-160x200.html
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPC19056 160x200
+url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
-match = -19.0%%
-title = Chiếu cây HT 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
+match = 14.3%%
+title = Ga phủ ESM20013 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
 match = -123.8%%
