--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-05 05:19:56
+lastsearch = 2024-08-05 05:57:41
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -12,9 +12,9 @@ title = Rights and Responsibilities of Association Board Members
 url = https://idfpr.illinois.gov/content/dam/soi/en/web/idfpr/ccico/pdfs/rights-and-responsibilities-of-association-board-members.pdf
 
 [www.reddit.com]
-match = -64.7%%
-title = How I gutted my HOA : r/pettyrevenge
-url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
+match = -35.3%%
+title = Can HOA come onto my property?
+url = https://www.reddit.com/r/HOA/comments/xqmjl8/can_hoa_come_onto_my_property/
 
 [www.quora.com]
 match = -194.1%%
@@ -107,9 +107,9 @@ title =
 url = https://www.newhomesource.com/learn/8-surfire-ways-to-annoy-your-hoa/
 
 [www.leg.state.fl.us]
-match = -170.6%%
-title = The 2023 Florida Statutes (including Special Session C)
-url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/Sections/0720.303.html
+match = -17.6%%
+title = The 2024 Florida Statutes
+url = http://www.leg.state.fl.us/statutes/index.cfm?App_mode=Display_Statute&URL=0700-0799/0720/0720.html
 
 [www.flsenate.gov]
 match = -147.1%%
@@ -565,4 +565,9 @@ url = https://ipropertymanagement.com/laws/virginia-hoa-rules-regulations
 match = -141.2%%
 title = H.O.P.E., Inc. v. Lake Greenfield Homeowners Ass'n
 url = https://casetext.com/case/hope-inc-v-lake-greenfield-homeowners-assn-1
+
+[coloradosun.com]
+match = 0.0%%
+title = 
+url = https://coloradosun.com/2024/07/08/colorado-hoa-foreclosure-new-laws/
 
