--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -14,7 +14,7 @@ url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-côn
 [demxanh.com]
 match = -85.0%%
 title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html?srsltid=AfmBOorj3wT1MtghyVcli2YX46_kGXP1jWr6H_bMcflUpCW5VwuhUstn
 
 [www.khodemthanhdo.com]
 match = 5.0%%
@@ -34,7 +34,7 @@ url = https://tchome.vn/bo-chan-ga-goi-pyeoda-c3438.html
 [thegioidemonline.com]
 match = -90.0%%
 title = Bộ chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
-url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
+url = https://thegioidemonline.com/bo-chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html?srsltid=AfmBOorxahffdlMoCWQZk6kiISOv_WVmPWrC5XQwm7mxsBvDKGrir7Q_
 
 [shopee.vn]
 match = -30.0%%
@@ -64,7 +64,7 @@ url = https://demsingapore.com/bo-chan-ga-goi-singapore-5-goi-gold-pyeoda-24.htm
 [vuanem.com]
 match = -15.0%%
 title = Chăn Ga Pyeoda Cao Cấp, Chính Hãng
-url = https://vuanem.com/brand/pyeoda
+url = https://vuanem.com/brand/pyeoda?srsltid=AfmBOopavPlFjsRgVBYdbPgfURW2L9ePuZyz5yIMDQkfE3x1a2yKvUgo
 
 [changagoidemphuongbac.com]
 match = -15.0%%
