--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-04 23:43:57
+lastsearch = 2024-08-05 05:49:24
 
 [gobearcats.com]
 match = -142.1%%
@@ -137,9 +137,9 @@ title = Gary Vilke | UCSD Profiles
 url = https://profiles.ucsd.edu/gary.vilke
 
 [som.cuanschutz.edu]
-match = -121.1%%
-title = Rubin Tuder, MD - School of Medicine - CU Anschutz
-url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/17863
+match = -110.5%%
+title = Larry Allen, MD Professor, Medicine-Cardiology
+url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/13824
 
 [saveseattleschools.blogspot.com]
 match = -131.6%%
@@ -207,9 +207,9 @@ title = Functional gene delivery to and across brain vasculature of ...
 url = https://www.nature.com/articles/s41467-023-38582-7
 
 [faculty.mdanderson.org]
-match = 26.3%%
-title = Stephen G. Chun, MD
-url = https://faculty.mdanderson.org/profiles/stephen_chun.html
+match = -6.7%%
+title = Jaffer A. Ajani
+url = https://faculty.mdanderson.org/profiles/jaffer_ajani.html
 
 [www.qut.edu.au]
 match = -89.5%%
@@ -252,9 +252,9 @@ title = Conference Schedule | C.elegans Development, Cell Biology ...
 url = https://conferences.union.wisc.edu/cedevelopment/program-info/conference-schedule/
 
 [profiles.ucsf.edu]
-match = 5.3%%
-title = Margaret Tempero, MD
-url = https://profiles.ucsf.edu/margaret.tempero
+match = -7.7%%
+title = Li Zhang, PhD
+url = https://profiles.ucsf.edu/li.zhang
 
 [profiles.stanford.edu]
 match = -36.8%%
@@ -600,4 +600,9 @@ url = https://www.prnewswire.com/news-releases/announcing-the-2024-us-presidenti
 match = -42.1%%
 title = Chăn ga gối cao cấp Urban mã UC23-039
 url = https://songhong.info/chan-ga-goi-uc039
+
+[nscresearchcenter.org]
+match = -200.0%%
+title = Sheet1
+url = https://nscresearchcenter.org/wp-content/uploads/NSC_SCHOOL_CODE_TO_IPEDS_UNIT_ID_XWALK.xlsx
 
