CI images update

--- a/images/chieu-cay-moc-hoa16/config.ini
+++ b/images/chieu-cay-moc-hoa16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa16.html
 lastopen = 2024-06-09 22:42:25
 
 [search]
-lastsearch = 2024-08-05 05:43:53
+lastsearch = 2024-08-05 06:21:47
 
 [eva.vn]
 match = -163.2%%
@@ -350,4 +350,9 @@ url = https://tintuconline.com.vn/nha-dep/hoa-no-la-diem-lanh-nhung-4-cay-nay-bo
 match = -47.4%%
 title = Cây cao bóng cả - Báo Tây Ninh Online
 url = https://baotayninh.vn/cay-cao-bong-ca-a176632.html
+
+[www.qdnd.vn]
+match = -136.8%%
+title = Quân khu 5: Những “bóng hồng” nơi thao trường bắn súng
+url = https://www.qdnd.vn/quoc-phong-an-ninh/xay-dung-quan-doi/bong-hong-noi-thao-truong-ban-sung-786221
 
