--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-05 04:29:04
+lastsearch = 2024-08-05 06:24:56
 
 [helloviettravel.com]
-match = -181.2%%
-title = Tour Xuyên Việt 18 ngày 17 đêm - Hello Vietnam Travel
-url = https://helloviettravel.com/tour-xuyen-viet-18-ngay-17-dem-2.html
+match = -150.0%%
+title = Tour xuyên Việt 21 ngày - Hello Việt Nam Travel
+url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
 
 [saovangtravel.com]
 match = -50.0%%
@@ -72,9 +72,9 @@ title = Top 18 địa điểm du lịch DakLak nổi tiếng không thể bỏ l
 url = https://mia.vn/cam-nang-du-lich/top-dia-diem-du-lich-daklak-noi-tieng-khong-the-bo-lo-5670
 
 [www.ivivu.com]
-match = -100.0%%
-title = Du lịch New York đừng quên 18 địa danh này
-url = https://www.ivivu.com/blog/2017/09/du-lich-new-york-dung-quen-18-dia-danh-nay/
+match = -187.5%%
+title = Du lịch Phú Yên mê mẩn tại 18 điểm tham quan nổi tiếng
+url = https://www.ivivu.com/blog/2024/05/du-lich-phu-yen-me-man-tai-18-diem-tham-quan-noi-tieng/
 
 [www.dulichxanh.com.vn]
 match = -143.8%%
