--- a/images/tui-warmdream-14/config.ini
+++ b/images/tui-warmdream-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-warmdream-14.html
 lastopen = 2024-06-10 00:24:23
 
 [search]
-lastsearch = 2024-08-05 05:41:28
+lastsearch = 2024-08-05 06:27:18
 
 [www.diepxuan.com]
 match = -31.2%%
@@ -37,9 +37,9 @@ title = Báo cáo thị trường Nhân vật hoạt hình dành cho doanh ...
 url = https://metric.vn/nhan-vat-hoat-hinh
 
 [www.tiktok.com]
-match = -181.2%%
-title = use my discount code AYASCHANNEL1 on @YesStyle ...
-url = https://www.tiktok.com/@ayas.channel/video/7311712186034851078
+match = -31.2%%
+title = Huda Beauty Best Lip Liner
+url = https://www.tiktok.com/discover/huda-beauty-best-lip-liner
 
 [archiveofourown.org]
 match = -137.5%%
@@ -250,4 +250,9 @@ url = http://kllibrary.dbkl.gov.my/client/en_US/pkl/search/detailnonmodal.detail
 match = -193.8%%
 title = tui warmdream 16 - The third continent / Wings of Fire Book 16
 url = https://www.dmrw859.com/blog/vljjrwrj-233/
+
+[www.nwgm300.com]
+match = -143.8%%
+title = tui warmdream 16 - TUI MAGIC LIFE Bodrum - nwgm300.com
+url = https://www.nwgm300.com/shop/vljjrwrj-233/
 
