--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-08-05 04:38:01
+lastsearch = 2024-08-05 06:15:52
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng Basic 100%% cotton BC22 057
 url = https://changagoidemsonghong.com/chan-ga-goi-bc57
 
 [songhong.info]
-match = -16.7%%
-title = Bộ chăn ga gối cotton 100%% dòng Basic mã BC-29
-url = https://songhong.info/chan-ga-goi-bc29
+match = -8.3%%
+title = Mẫu chăn ga gối cao cấp Urban mã UC22-021
+url = https://songhong.info/chan-ga-goi-uc021
 
 [hanvico.com.vn]
 match = 41.7%%
@@ -28,8 +28,8 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
 match = -87.5%%
-title = Everon EPC-22046 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epc22046.html
+title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -38,8 +38,8 @@ url = https://songhongchinhhang.vn/URBAN-COLLECTION/bo-urban-coleection-2022-202
 
 [everon.com.vn]
 match = -66.7%%
-title = Bộ Chăn Ga Everon ESB 22055 Bộ Sưu Tập Mới Nhất Năm ...
-url = https://everon.com.vn/bo-chan-ga-everon-esb-22055/
+title = Bộ Chăn Ga Everon EPM 22060 | Mới Nhất Năm 2022. Hotline
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22060/
 
 [dailyeveron.vn]
 match = -66.7%%
@@ -48,7 +48,7 @@ url = https://dailyeveron.vn/bo-everon-2022.html
 
 [everonhanquoc.vn]
 match = -29.2%%
-title = Bộ Everon EPM 23067 - Chăn ga gối đệm Everon
+title = Bộ Everon EPM 23067 - chăn ga gối đệm Everon
 url = https://everonhanquoc.vn/everon/13847/bo-chan-ga-goi-epm-23067
 
 [songhongonline.vn]
