--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-05 05:32:05
+lastsearch = 2024-08-05 06:26:17
 
 [www.instagram.com]
-match = -223.1%%
-title = Yuki Hoi (@hoisoki) • Instagram photos and videos
-url = https://www.instagram.com/hoisoki/?hl=en
+match = -238.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [www.linkedin.com]
-match = -192.3%%
-title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
-url = https://www.linkedin.com/in/hoi-ki-chan-519219147
+match = 23.1%%
+title = Hoi Chan Studio
+url = https://www.linkedin.com/in/yiu-hoi-chan
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -39,7 +39,7 @@ url = https://www.midland.com.hk/en/agent/yuki-chan-wai-man-S-240578
 [www.polyu.edu.hk]
 match = -123.1%%
 title = Faculty of Health and Social Sciences
-url = https://www.polyu.edu.hk/fhss/-/media/department/fhss/content/home/deanlist/deanslist2223.pdf
+url = https://www.polyu.edu.hk/fhss/-/media/department/fhss/content/home/deanlist/deanslist2122.pdf
 
 [www.behindthename.com]
 match = 0.0%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -215.4%%
-title = Hoi Chan Translates Everyday Experiences into ...
+match = -300.0%%
+title = Hoi Chan Translates Everyday Experiences into ... - Colossal
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
@@ -215,4 +215,9 @@ url = https://www.plkc.edu.hk/centenarian/scholarships/
 match = -169.2%%
 title = Hoshino Ichika | Project SEKAI Wiki | Fandom
 url = https://projectsekai.fandom.com/wiki/Hoshino_Ichika
+
+[www.federalregister.gov]
+match = -300.0%%
+title = Quarterly Publication of Individuals Who Have Chosen to ...
+url = https://www.federalregister.gov/documents/2024/08/01/2024-16993/quarterly-publication-of-individuals-who-have-chosen-to-expatriate
 
