--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-05 05:47:19
+lastsearch = 2024-08-05 06:28:22
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,14 +12,14 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = -42.1%%
-title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
-url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
+match = -57.9%%
+title = Ga Chống Thấm 2m x 2m2( giao màu ngẫu nhiên)
+url = https://shopee.vn/Ga-Chống-Thấm-2m-x-2m2(-giao-màu-ngẫu-nhiên)-i.65265925.2337418304
 
 [www.lazada.vn]
 match = -136.8%%
 title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
-url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html?srsltid=AfmBOooNX_yKeRha6IgjNxBWTJ2Jt_ZQeqo4Tg_GrJ8qU6UnVDzmqX0W
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
 
 [demgiare.net]
 match = 5.3%%
