--- a/images/tham-giuong-ii-140x190/config.ini
+++ b/images/tham-giuong-ii-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-140x190.html
 lastopen = 2024-06-17 21:12:12
 
 [search]
-lastsearch = 2024-08-05 05:16:13
+lastsearch = 2024-08-05 06:14:25
 
 [www.diepxuan.com]
 match = 40.9%%
@@ -17,9 +17,9 @@ title = Thảm trải giường hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=thảm trải giường
 
 [www.lazada.vn]
-match = -86.4%%
-title = Thảm Trải Giường 2m2 Giá Tốt T06/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/tham-trai-giuong-2m2/
+match = -127.3%%
+title = 2 trẻ em hoạt hình không thấm nước dày chần điều chỉnh nổi ...
+url = https://www.lazada.vn/products/2-tre-em-hoat-hinh-khong-tham-nuoc-day-chan-dieu-chinh-noi-tam-boc-vua-van-140x190-vo-boc-nem-1-chiec-i2331485094.html
 
 [flexhouse.vn]
 match = -104.5%%
@@ -82,8 +82,8 @@ title = CĂN HỘ 2 TẦNG 8/10 pers, 110m2 KHỞI HÀNH/ARRIVEE SKIS ...
 url = https://www.airbnb.com.vn/rooms/1258488
 
 [comehome.com.vn]
-match = -77.3%%
-title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ ...
+match = -109.1%%
+title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ cho bé ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [anawood.vn]
