--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-05 02:51:38
+lastsearch = 2024-08-05 06:26:59
 
 [demxanh.com]
 match = -22.7%%
@@ -12,9 +12,9 @@ title = Thảm trải giường lông cừu TLC 06 - Hà Nội
 url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
-match = 18.2%%
-title = Bộ thảm ghế gỗ 1 dài 2 ngắn
-url = https://demre.com.vn/bo-tham-ghe-go-1-dai-2-ngan-6
+match = 75.0%%
+title = Thảm lông xù 150x190
+url = https://demre.com.vn/tham-long-xu-150x190-2
 
 [decoviet.vn]
 match = 23.8%%
