--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-05 03:45:18
+lastsearch = 2024-08-05 06:14:03
 
 [xoptraisan.info]
 match = -64.7%%
@@ -187,9 +187,9 @@ title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
 url = https://core.ac.uk/download/pdf/154886317.pdf
 
 [m.facebook.com]
-match = -135.3%%
-title = THẢM XỐP TRẢI SÀN - Xốp tranh giao thông Tường Lâm ...
-url = https://m.facebook.com/xoplotsan/photos/xốp-tranh-giao-thông-tường-lâm-bịch-8-tấm-ghép-thành-2-hình-như-trên-mỗi/724213227684188/
+match = -129.4%%
+title = THẢM XỐP TRẢI SÀN - Xốp nỉ ghép kẻ Tường Lâm bịch ...
+url = https://m.facebook.com/xoplotsan/photos/xốp-nỉ-ghép-kẻ-tường-lâm-bịch-16-tấm-mỗi-tấm-kích-thước-50-x-50cm-kho/724212907684220/
 
 [citydocs.cityoforange.org]
 match = -194.1%%
