--- a/images/chieu-nhua-ha-noi-160x200/config.ini
+++ b/images/chieu-nhua-ha-noi-160x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-160x200.html
 lastopen = 2024-08-01 09:09:09
 
 [search]
-lastsearch = 2024-08-04 20:15:17
+lastsearch = 2024-08-05 06:32:27
 
 [demre.com.vn]
-match = 76.0%%
-title = Chiếu nhựa cao cấp 180x200
-url = https://demre.com.vn/chieu-nhua-cao-cap-180x200
+match = 61.1%%
+title = Chiếu nhựa 160x200
+url = https://demre.com.vn/chieu-nhua-160x200
 
 [www.facebook.com]
 match = 42.1%%
 title = Chiếu Nhựa Thái Lan
-url = https://www.facebook.com/chieunhuathailan/
+url = https://www.facebook.com/chieunhuathailan/?locale=vi_VN
 
 [kyoryo.vn]
 match = 12.0%%
@@ -37,9 +37,9 @@ title = Chiếu nhựa Hà Nội du lịch 160x200 - Điệp Xuân
 url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-160x200.html
 
 [demxanh.com]
-match = -12.0%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = -28.0%%
+title = Bảng giá chiếu trúc hạt Trường Sinh mới nhất 2022
+url = https://demxanh.com/bang-gia-chieu-truc-hat-truong-sinh-moi-nhat-2019.html
 
 [shopee.vn]
 match = 36.0%%
