--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-05 04:50:06
+lastsearch = 2024-08-05 06:53:42
 
 [tiki.vn]
 match = -138.9%%
 title = Bộ Chăn Drap Gối Cao Cấp Phủ Màu Thêu Thắng Lợi - Tiki
-url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-cam-160-x-200-cm-p7695465.html
+url = https://tiki.vn/bo-chan-drap-goi-cao-cap-phu-mau-theu-thang-loi-xanh-duong-160-x-200-cm-p7855483.html
 
 [nemxinh.net]
 match = 50.0%%
@@ -32,14 +32,14 @@ title = Giường 160x200 – Chổi Xể - Nội Thất Giá Rẻ Xuất Âu
 url = https://choixe.vn/collections/giuong-160x200
 
 [nemkimtrang.com]
-match = -116.7%%
-title = Bộ Ga (Drap) Nệm Cotton Đặc Biệt Edena Mẫu 524
-url = https://nemkimtrang.com/bo-ga-drap-nem-cotton-dac-biet-edena-mau-524-chinh-hang-cao-cap
+match = -150.0%%
+title = Bộ Ga (Drap) Nệm Tencel Edena Mẫu 705 - CHÍNH HÃNG ...
+url = https://nemkimtrang.com/bo-ga-drap-nem-tencel-edena-mau-705-chinh-hang-cao-cap
 
 [demxanh.com]
-match = -55.6%%
-title = Bộ ga chun Cotton chống thấm màu đỏ
-url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-do.html
+match = -72.2%%
+title = Bộ ga chun Cotton chống thấm màu xanh đậm
+url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
 match = -66.7%%
