--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-05 04:41:34
+lastsearch = 2024-08-05 06:54:46
 
 [www.youtube.com]
-match = -26.3%%
-title = cách trồng và chăm sóc cây mộc hương
-url = https://www.youtube.com/playlist?list=PLOR0hkahAaw2OD6ixcgagDZcwB5Jx3-Nd
+match = -152.6%%
+title = Hoa Mộc Hương ta nở bao lâu thì tàn - Khi nào lập lại hoa?
+url = https://www.youtube.com/watch?v=IL1ZIO7fIro
 
 [trangtrisanvuon.vn]
 match = -147.4%%
