--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-05 05:31:19
+lastsearch = 2024-08-05 06:55:07
 
 [vinatools.com]
 match = -140.0%%
@@ -172,9 +172,9 @@ title = D2 Club (Ma Cao, Trung Quốc) - Đánh giá - Tripadvisor
 url = https://www.tripadvisor.com.vn/Attraction_Review-g664891-d4925838-Reviews-D2_Club-Macau.html
 
 [www.tiktok.com]
-match = -246.7%%
-title = Trend về D2 Bình Thạnh rồi nè Tui đi ăn lạp xưởng xúc xích ...
-url = https://www.tiktok.com/@hi.vidayyy/video/7322653266637032706
+match = -66.7%%
+title = ? | bill peanut allergy at lunch
+url = https://www.tiktok.com/@tuilabelone/video/7399110241943620880
 
 [www.lazada.vn]
 match = -146.7%%
@@ -182,9 +182,9 @@ title = [NGẪU NHIÊN] Dụng cụ nhảy dây có đếm số vòng D216
 url = https://www.lazada.vn/products/ngau-nhien-dung-cu-nhay-day-co-dem-so-vong-d216-rikob-shop-i2433883429.html
 
 [shopee.vn]
-match = -226.7%%
-title = Que hàn sắt KOBE-16 D2.6 - 3.2 - 4.0 - 5.0 ( Thái Lan )
-url = https://shopee.vn/product/686340132/24951807725
+match = -240.0%%
+title = Đầu lắc xi lanh FJ - Khớp nối đầu lắc các cỡ M5,6,8,10,12, ...
+url = https://shopee.vn/Đầu-lắc-xi-lanh-FJ-Khớp-nối-đầu-lắc-các-cỡ-M5-6-8-10-12-14-16-18-20-27-(chính-hãng-SNS)-i.1096166656.24605536524
 
 [www.ministop.vn]
 match = -26.7%%
