--- a/images/chieu-truc-thai-den14/config.ini
+++ b/images/chieu-truc-thai-den14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den14.html
 lastopen = 2024-06-09 23:36:30
 
 [search]
-lastsearch = 2024-08-05 05:45:16
+lastsearch = 2024-08-05 06:52:37
 
 [www.diepxuan.com]
 match = 42.9%%
@@ -632,9 +632,9 @@ title = XEM PHIM VUI NHẬN ƯU ĐÃI XỊN
 url = https://aeonmall-binhtan.com.vn/su-kien/xem-phim-vui-nhan-uu-dai-xin
 
 [www.vinmec.com]
-match = -57.1%%
-title = Giai đoạn hoàng thể và quá trình thụ thai
-url = https://www.vinmec.com/vie/bai-viet/giai-doan-hoang-va-qua-trinh-thu-thai-vi
+match = -100.0%%
+title = Tim thai có khi nào? Thời điểm siêu âm tim thai lần đầu
+url = https://www.vinmec.com/vie/bai-viet/tim-thai-co-khi-nao-thoi-diem-sieu-am-tim-thai-lan-dau-vi
 
 [www.hcmcpv.org.vn]
 match = -104.8%%
