--- a/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
+++ b/images/nem-caosu-thien-nhien-140x200x10-felix/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thien-nhien-140x200x10-felix.html
 lastopen = 2024-06-07 00:21:32
 
 [search]
-lastsearch = 2024-08-05 05:45:58
+lastsearch = 2024-08-05 06:56:08
 
 [thefelix.vn]
 match = -50.0%%
@@ -67,9 +67,9 @@ title = [GIÁ ĐỆM 2024] Nệm cao su thiên nhiên ...
 url = https://ninhouse.vn/collections/nem-cao-su-thien-nhien
 
 [www.lazada.vn]
-match = 5.3%%
-title = Nệm cao su thiên nhiên Felix Comfort - Độ cứng tiêu chuẩn ...
-url = https://www.lazada.vn/products/nem-cao-su-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-15cm-i2294959349-s11133506275.html
+match = 13.2%%
+title = Nệm cao su 100%% thiên nhiên - Felix Comfort - độ cứng ...
+url = https://www.lazada.vn/products/nem-cao-su-100-thien-nhien-felix-comfort-do-cung-tieu-chuan-cap-do-1-nang-do-co-the-thoang-khi-toi-uu-i2295048242.html
 
 [nemcaosuthangloi.vn]
 match = 18.2%%
