--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-05 06:26:59
+lastsearch = 2024-08-05 06:50:55
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOooUL0WgIesGCAwDV4rY4a4IiJ3S5u-2HMagJVKTCqtyCZqkP45E
 
 [demre.com.vn]
 match = 75.0%%
@@ -44,7 +44,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html?srsltid=AfmBOor1hMYcPE9WmOzzDVnVilUq9Kq6-JSA-7BrZdc_5ypDIGf6C4Le
 
 [www.lazada.vn]
 match = -77.3%%
