--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-05 04:34:35
+lastsearch = 2024-08-05 06:54:25
 
 [www.lazada.vn]
-match = -46.7%%
-title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/
+match = -193.3%%
+title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
+url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOoqchdXNivIdGeNdsaYUJPa2m90HS6RJun33yrGhUyIG6sZQtj5d
 
 [shopee.vn]
 match = 13.3%%
@@ -19,22 +19,22 @@ url = https://shopee.vn/Vỏ-gối-vuông-Dollar-45-45cm-i.129451980.11513701819
 [jysk.vn]
 match = -166.7%%
 title = Vỏ Gối Trang Trí, Vỏ Gối Sofa Đẹp, Giá Rẻ - JYSK.vn
-url = https://jysk.vn/vo-goi-trang-tri
+url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooJthl5tBgy9TWfdQhPLA2ZAEXQI1agxrXVhADbTjqE8JbW_3u0
 
 [chus.vn]
 match = -173.3%%
 title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
-url = https://chus.vn/vo-goi-vuong-hmong/
+url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOoql9OBCqs_BeXGBkZVLPh4UnHSWRcSuiAZoqdoVzhH5bfiGLXks
 
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam
+url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOorUY2h8ckFLwkar6f_ubhyEskezZ1P-_yNajVomwadp8VqYOzNt
 
 [lepetit.com.vn]
-match = -140.0%%
-title = Vỏ gối vuông sofa nhung gân sọc 45x45 cm - Le Petit
-url = https://lepetit.com.vn/vo-goi-vuong-sofa-nhung-gan-soc-45x45-cm
+match = -173.3%%
+title = Vỏ gối vuông sofa họa tiết hình học 45x45 cm - Le Petit
+url = https://lepetit.com.vn/vo-goi-vuong-sofa-hoa-tiet-bac-au-45x45-cm
 
 [flexhouse.vn]
 match = -160.0%%
