CI images update

--- a/images/chan-3-kg/config.ini
+++ b/images/chan-3-kg/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-kg.html
 lastopen = 2024-06-09 21:50:05
 
 [search]
-lastsearch = 2024-08-05 04:37:40
+lastsearch = 2024-08-05 08:12:28
 
 [silverwow.net]
 match = -255.6%%
@@ -42,9 +42,9 @@ title = C channel sizes and dimensions chart - Asia
 url = https://www.stainless-structurals.com/download/Data-Sheet-Standard-Channels-Asia.pdf
 
 [pubmed.ncbi.nlm.nih.gov]
-match = -444.4%%
-title = Integrated Metabolic and Epigenomic Reprograming by ...
-url = https://pubmed.ncbi.nlm.nih.gov/32795401/
+match = -155.6%%
+title = a single-arm, phase 2 trial
+url = https://pubmed.ncbi.nlm.nih.gov/36529152/
 
 [en.wikipedia.org]
 match = -44.4%%
@@ -62,9 +62,9 @@ title = Mikawaya Edomae Toro-chan 6.6 lbs (3 kg) (500 g) x 6 Packs ...
 url = https://www.amazon.co.jp/-/en/Mikawaya-Edomae-Toro-chan-Packs-Frozen/dp/B01APABNVO
 
 [unistrutohio.com]
-match = -466.7%%
-title = Unistrut P1001 - 1-5/8" x 3-1/4", 12 Gauge Back-to- ...
-url = https://unistrutohio.com/products/p1001
+match = -511.1%%
+title = Unistrut P1000 - 1-5/8" x 1-5/8", 12 Gauge Channel, Metal ...
+url = https://unistrutohio.com/products/p1000
 
 [scholar.google.co.uk]
 match = 0.0%%
@@ -132,9 +132,9 @@ title =
 url = https://m.indiamart.com/proddetail/mild-steel-c-channel-21330745648.html
 
 [www.amazon.com]
-match = -366.7%%
-title = Maruchan Ramen Chicken, Instant Ramen Noodles ...
-url = https://www.amazon.com/Maruchan-Ramen-Chicken-3-0-Pack/dp/B07222R3Y5
+match = -344.4%%
+title = Tees Factory KG-5542671HK Koguma-chan Mini ...
+url = https://www.amazon.com/Factory-KG-5542671HK-Koguma-chan-Character-Basket/dp/B0BW2HGFKD
 
 [www.robe.cz]
 match = -500.0%%
@@ -312,9 +312,9 @@ title = Cheong Chan Elephant Thick Caramel Sauce 3Kg
 url = https://11minimarket.com/product/cheong-chan-elephant-thick-caramel-sauce-3kg/
 
 [www.etsy.com]
-match = -455.6%%
-title = Sterling Silver Curb Chan, 1mm Thick 925 Solid ... - Etsy
-url = https://www.etsy.com/listing/969422604/sterling-silver-curb-chan-1mm-thick-925
+match = -444.4%%
+title = 3 Feet Sterling Silver Long and Short Chain by the Foot
+url = https://www.etsy.com/listing/73621885/3-feet-sterling-silver-long-and-short
 
 [www.schwalbetires.com]
 match = -500.0%%
