--- a/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-cao-su-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-cao-su-18.html
 lastopen = 2024-06-10 00:19:48
 
 [search]
-lastsearch = 2024-08-05 06:57:31
+lastsearch = 2024-08-05 07:59:47
 
 [demxanh.com]
-match = 11.8%%
-title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
+match = 38.2%%
+title = Chiếu điều hòa cao su non vỏ bọc vải Tencel
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non.html
 
 [shopee.vn]
 match = -2.9%%
@@ -130,4 +130,9 @@ url = https://nemuytin.com/product/chieu-dieu-hoa-cao-su-non-loai-tot-mau-5/
 match = 0.0%%
 title = 
 url = https://fptshop.com.vn/tin-tuc/dien-may/chieu-dieu-hoa-la-gi-161105
+
+[www.youtube.com]
+match = -5.9%%
+title = Review chiếu điều hòa cao su non và vài món mua trên Sốp ...
+url = https://www.youtube.com/watch?v=1UjrRLNjJ7o
 
