--- a/images/chieu-du-lich-18/config.ini
+++ b/images/chieu-du-lich-18/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/chieu-du-lich-18.html
 lastopen = 2024-06-09 21:46:31
 
 [search]
-lastsearch = 2024-08-05 06:24:56
+lastsearch = 2024-08-05 08:05:01
 
 [helloviettravel.com]
-match = -150.0%%
-title = Tour xuyên Việt 21 ngày - Hello Việt Nam Travel
+match = -187.5%%
+title = Tour du lịch xuyên Việt 21 ngày - Hello Việt Nam Travel
 url = https://helloviettravel.com/hlvn_xv12-du-lich-xuyen-viet-21-ngay-20-dem-khoi-hanh-tu-tp-hcm.html
 
 [saovangtravel.com]
@@ -32,8 +32,8 @@ title = Du Lịch USA và Thế Giới
 url = https://www.facebook.com/groups/dulichusavathegioi/
 
 [vinpearl.com]
-match = -181.2%%
-title = Địa điểm du lịch Nghệ An - 18 tọa độ VUI CHƠI hấp dẫn nhất
+match = -156.2%%
+title = Hé lộ “tọa độ” 18 địa điểm du lịch Nghệ An HOT nhất!
 url = https://vinpearl.com/vi/he-lo-toa-do-18-dia-diem-du-lich-nghe-an-hot-nhat
 
 [thegioixecau.vn]
@@ -42,9 +42,9 @@ title = XE THAM QUAN DU LỊCH 2, 4, 6, 8, 11, 14, 18,...23 CHỖ
 url = https://thegioixecau.vn/xe-tham-quan-du-lich-2-4-6-8-11-14-18-23-cho
 
 [www.youtube.com]
-match = -218.8%%
-title = Khám phá Làng du lịch Mỹ Khánh (Cần Thơ) - Tập 3: Đại náo ...
-url = https://www.youtube.com/watch?v=esnw2jXy9g0
+match = -143.8%%
+title = KINH DỊ 18 TẦNG ĐỊA NGỤC KHU DU LỊCH SUỐI TIÊN 2024
+url = https://www.youtube.com/watch?v=Z5uq2IjfDD8
 
 [badenmountain.sunworld.vn]
 match = -212.5%%
