--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-05 07:00:13
+lastsearch = 2024-08-05 08:04:19
 
 [bedding.vn]
 match = -123.1%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -261.5%%
-title = Expert Profile: Je Hyeong Bahk - UC Research Directory
-url = https://researchdirectory.uc.edu/p/bahkjg
+match = -292.3%%
+title = Chong Ahn - UC Research Directory - University of Cincinnati
+url = https://researchdirectory.uc.edu/p/ahnch
 
 [thegioinem.com]
 match = -230.8%%
@@ -410,4 +410,14 @@ url = https://www.courtlistener.com/docket/4505189/chun-v-georgia-christian-univ
 match = -238.5%%
 title = ACC, CSS Chun Cúig As 16 Láithreán Baseball NCAA a ...
 url = https://newhdmedia.com/ga/acc-sec-chun-cúig-cinn-de-16-shuíomh-baseball-ncaa-a-óstáil/
+
+[caps.byu.edu]
+match = -76.9%%
+title = Current and Former Interns
+url = https://caps.byu.edu/current-and-former-interns
+
+[ecatalog.nccu.edu]
+match = -69.2%%
+title = Administration and Faculty
+url = https://ecatalog.nccu.edu/content.php?catoid=16&navoid=1528
 
