--- a/images/man-in-hoa-dep-18/config.ini
+++ b/images/man-in-hoa-dep-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-18.html
 lastopen = 2024-06-10 01:12:42
 
 [search]
-lastsearch = 2024-08-05 06:17:18
+lastsearch = 2024-08-05 08:00:09
 
 [idfpr.illinois.gov]
 match = -170.6%%
@@ -17,9 +17,9 @@ title = How I gutted my HOA : r/pettyrevenge
 url = https://www.reddit.com/r/pettyrevenge/comments/10fgrkx/how_i_gutted_my_hoa/
 
 [www.quora.com]
-match = -176.5%%
-title = Is it legal for a Florida HOA president to hire and pay ...
-url = https://www.quora.com/Is-it-legal-for-a-Florida-HOA-president-to-hire-and-pay-himself-as-a-Handyman-for-the-community-of-which-he-is-the-HOA-President
+match = -164.7%%
+title = How can the HOA kick you out of your house when you ...
+url = https://www.quora.com/How-can-the-HOA-kick-you-out-of-your-house-when-you-own-it
 
 [lauragoodsonart.com]
 match = 47.1%%
