--- a/images/man-ren-16/config.ini
+++ b/images/man-ren-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-16.html
 lastopen = 2024-06-07 00:52:49
 
 [search]
-lastsearch = 2024-08-05 04:15:15
+lastsearch = 2024-08-05 08:00:50
 
 [quizlet.com]
 match = -170.0%%
@@ -52,9 +52,9 @@ title = List of acupuncture points
 url = https://en.wikipedia.org/wiki/List_of_acupuncture_points
 
 [books.google.com]
-match = -430.0%%
-title = Proceedings of the 10th West Coast Conference on Formal ...
-url = https://books.google.com/books?id=BQ93UeXC1_kC&pg=PA187&lpg=PA187&dq=man+ren+16&source=bl&ots=ftlgqHJmja&sig=ACfU3U2W9wr5lRWg_IbMi8c2RvX7t6pGlA&hl=en&sa=X&ved=2ahUKEwjhwq_0oNyHAxWcEkQIHaTwIYgQ6AF6BAgcEAM
+match = -280.0%%
+title = The Letter to Ren An and Sima Qian’s Legacy
+url = https://books.google.com/books?id=eCnvCwAAQBAJ&pg=PA170&lpg=PA170&dq=man+ren+16&source=bl&ots=0fsjRVjw_7&sig=ACfU3U3ICX_mdz4c4oXez5J3SXSM2Q7x5Q&hl=en&sa=X&ved=2ahUKEwjPgYyq09yHAxX1DzQIHY7HAL8Q6AF6BAgXEAM
 
 [www.phillyvoice.com]
 match = 0.0%%
@@ -94,7 +94,7 @@ url = https://renaissancefest.com/
 [us.mbt.com]
 match = -220.0%%
 title = Men's Ren in White 702758-16L - MBT Shoes
-url = https://us.mbt.com/men-s-ren-white-702758-16l.html
+url = https://us.mbt.com/men-s-ren-white-702758-16l.html?srsltid=AfmBOooot2pt4J1Jkwc7AcbFoK1Hc1S6u0S1N_RkK7MAaGQoRTOToWKa
 
 [hopkinssports.com]
 match = -100.0%%
