--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-05 06:22:31
+lastsearch = 2024-08-05 08:06:44
 
 [www.reddit.com]
 match = -82.6%%
@@ -98,8 +98,8 @@ url = https://www.ft.com/content/b93a8683-6a9b-365a-aba7-d771407db26b
 
 [www.tiktok.com]
 match = -104.3%%
-title = the #leaguecosplay in Seoul is unmatched 🔥 #worlds2023 ...
-url = https://www.tiktok.com/@leagueoflegends/video/7302634740094438686?lang=en
+title = Teaching Korean basics to @Nisqy I hope it helps 😈 @SK ...
+url = https://www.tiktok.com/@laurebuliiv/video/7378201658527911176
 
 [www.foodandwine.com]
 match = -4.3%%
@@ -157,9 +157,9 @@ title = Over 1000 Companies Have Curtailed Operations in ...
 url = https://som.yale.edu/story/2022/over-1000-companies-have-curtailed-operations-russia-some-remain
 
 [apps.dtic.mil]
-match = -52.2%%
-title = EBB and Flow, November 1950-July 1951 - DTIC
-url = https://apps.dtic.mil/sti/tr/pdf/ADA232745.pdf
+match = -69.6%%
+title = Task Force Smith--A Leadership Failure? - DTIC
+url = https://apps.dtic.mil/sti/tr/pdf/ADA251335.pdf
 
 [assets.publishing.service.gov.uk]
 match = -65.2%%
@@ -282,9 +282,9 @@ title = Introduction
 url = https://www.degruyter.com/document/doi/10.1515/9780824887964-013/pdf?licenseType=restricted
 
 [en.yna.co.kr]
-match = -117.4%%
-title = (2nd LD) PM: THAAD deployment 'difficult yet inevitable ...
-url = https://en.yna.co.kr/view/AEN20170907001852315
+match = -87.0%%
+title = PM calls off press meeting amid clash over THAAD ...
+url = https://en.yna.co.kr/view/AEN20170907001800315
 
 [lol.fandom.com]
 match = 0.0%%
