--- a/images/tham-giuong-loai-2-16/config.ini
+++ b/images/tham-giuong-loai-2-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-loai-2-16.html
 lastopen = 2024-06-10 00:46:28
 
 [search]
-lastsearch = 2024-08-05 06:51:14
+lastsearch = 2024-08-05 08:14:29
 
 [shopee.vn]
 match = -76.2%%
@@ -127,9 +127,9 @@ title = Chọn thảm trải sàn giường ngủ theo phong thủy cho từng m
 url = https://danacity.com/chon-tham-trai-san-giuong-ngu-theo-phong-thuy-cho-tung-menh-89303u.html
 
 [noithatcaco.vn]
-match = -123.8%%
-title = 65 Mẫu giường ngủ trẻ em bé trai bé gái - Thiết kế siêu xinh
-url = https://noithatcaco.vn/collections/giuong-ngu-tre-em
+match = -95.2%%
+title = Giường ngủ hiện đại đẹp giá rẻ 100+ mẫu mới 09/2024
+url = https://noithatcaco.vn/collections/giuong-ngu
 
 [danacity.com.vn]
 match = -42.9%%
