CI images update

--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-05 04:40:51
+lastsearch = 2024-08-05 09:46:54
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOopRkuWN09-Mw1DwDfxOP-xqPjvxLq9mwICM5XYYaRjMJToeXyCW
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
 
 [everon.online]
-match = -50.0%%
-title = Bộ Everon EPM24061
-url = https://everon.online/products/bo-everon-epm24061
+match = 18.9%%
+title = Bộ Chăn Ga Gối Everon SR04 Chính Hãng
+url = https://everon.online/products/bo-everon-sr04
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,13 +23,13 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-22063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm22063.html
+title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOopipssl-W_ywNhwhUe_8esmnCS0fXxi1hLBJpuVw2U-5r0fUpXv
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 29.7%%
-title = BỘ CHĂN GA GỐI GIẤC MƠ MÂY - ESJ24030
-url = https://www.everonvni.vn/bo-chan-ga-goi-giac-mo-may-esj24030/?srsltid=AfmBOorqqINrsH6b_UoiRf2GdTCMTPow-e03XO8avIFV8LSRINWYyeVi
+match = 27.0%%
+title = BỘ CHĂN GA GỐI MIỀN SA MẠC - EST24033
+url = https://www.everonvni.vn/bo-chan-ga-goi-mien-sa-mac-est24033/
 
 [everonhanquoc.vn]
 match = 19.4%%
