--- a/images/nem-di-a-mon-7f-14-tc/config.ini
+++ b/images/nem-di-a-mon-7f-14-tc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-7f-14-tc.html
 lastopen = 2024-06-09 23:44:26
 
 [search]
-lastsearch = 2024-08-05 06:45:27
+lastsearch = 2024-08-05 09:50:59
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -365,4 +365,9 @@ url = https://www.mathunion.org/fileadmin/ICM/Proceedings/ICM1912.1/ICM1912.1.oc
 match = -33.3%%
 title = DEFENSE TECHNICAl INFORMATION CENTER
 url = https://www.esd.whs.mil/Portals/54/Documents/FOID/Reading Room/Other/15-F-0483_DOC_06_final_DOC_ODNA_The_Impact_of_Demographic_Crisis_on_Russia's_Future_Economy_May_1999.pdf
+
+[psc.ky.gov]
+match = 4.8%%
+title = KAW_R_AGDR1#375_042610
+url = https://psc.ky.gov/pscecf/2010-00036/15800_efs/04262010a/KAW_R_AGDR1_375_THRU_414.pdf
 
