--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-05 03:47:09
+lastsearch = 2024-08-05 09:56:10
 
 [demxanh.com]
 match = 0.0%%
@@ -112,7 +112,7 @@ title = 1 tấm ga trải giường Thẩm mỹ viện đồng bằng ...
 url = https://www.lazada.vn/products/1-tam-ga-trai-giuong-tham-my-vien-dong-bang-tam-ga-trai-giuong-cotton-than-thien-voi-da-cham-mem-mai-chong-co-mat-xa-spa-cokhong-co-lo-i2534625342.html
 
 [vn.my-best.com]
-match = -81.8%%
-title = [2024] Top 10 Ga Chống Thấm tốt nhất hiện nay ...
-url = https://vn.my-best.com/37473
+match = -72.7%%
+title = [2024] Top 10 Ga Trải Giường tốt nhất hiện nay ...
+url = https://vn.my-best.com/37098
 
