--- a/images/bo-bon-mua-chun-chan-1602m/config.ini
+++ b/images/bo-bon-mua-chun-chan-1602m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-1602m.html
 lastopen = 2024-06-07 01:32:26
 
 [search]
-lastsearch = 2024-08-05 03:40:23
+lastsearch = 2024-08-05 09:50:36
 
 [everon.online]
 match = 19.2%%
@@ -29,7 +29,7 @@ url = http://www.changagoidemeveron.vn/3/everon/chan-bon-mua-everon-lite-eve-01.
 [www.everonvni.vn]
 match = 30.8%%
 title = BỘ CHĂN BỐN MÙA HOA MỘC LAN ESB23022
-url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/
+url = https://www.everonvni.vn/bo-chan-bon-mua-hoa-moc-lan-esb23022/?srsltid=AfmBOoprW8F0gr1ToMXNlUcOQev3QsNm0_JTceEq5bL1Clf0jcRg5vdA
 
 [www.tiktok.com]
 match = -53.8%%
@@ -124,7 +124,7 @@ url = https://vpphongha.vn/products/vo-4-oly-hong-ha-48-trang-0555-trang-nguyen
 [everonvn.com.vn]
 match = -88.5%%
 title = Hướng dẫn cách giặt ruột gối sạch sẽ bằng tay và bằng máy giặt
-url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat
+url = https://everonvn.com.vn/tin-tuc/1602/cach-giat-ruot-goi-everon-bang-tay-va-bang-may-giat?srsltid=AfmBOor01Xph0qdqo4eIt52tDYLAVidu0G64-M13yXihJ22c3J70xhMS
 
 [www.youtube.com]
 match = -69.2%%
