--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-05 05:14:28
+lastsearch = 2024-08-05 09:47:32
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -67,9 +67,9 @@ title = Bộ Chăn Ga ES 1840
 url = https://tongdailyeveron.com.vn/products/bo-chan-ga-es1840
 
 [songhong.info]
-match = 2.9%%
-title = Dòng chăn ga gối Sông Hồng Basic mã mầu BC-04
-url = https://songhong.info/chan-ga-goi-bc-04
+match = 8.8%%
+title = Chăn ga gối Basic 100%% cotton mã Bc23-080
+url = https://songhong.info/chan-ga-goi-bc80
 
 [kona.com.vn]
 match = 41.2%%
