--- a/images/chieu-nhua-ha-noi-140x190/config.ini
+++ b/images/chieu-nhua-ha-noi-140x190/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-140x190.html
 lastopen = 2024-08-03 06:31:32
 
 [search]
-lastsearch = 2024-08-05 05:35:15
+lastsearch = 2024-08-05 09:56:51
 
 [www.diepxuan.com]
 match = 48.0%%
@@ -22,9 +22,9 @@ title = Chiếu Trúc hạt Hương Trúc hạt vàng - Hà Nội
 url = https://demxanh.com/chieu-truc-hat-huong-truc.html
 
 [chieucoi.com.vn]
-match = -52.0%%
-title = Shop - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
-url = https://chieucoi.com.vn/shop/
+match = -68.0%%
+title = Chiếu cói - Chiếu cói Nga Sơn - Đại lý chiếu cói Toán Mát
+url = https://chieucoi.com.vn/
 
 [tchome.vn]
 match = 36.0%%
