--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-08-05 05:23:20
+lastsearch = 2024-08-05 10:00:39
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 21
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-21.html?srsltid=AfmBOopVLOdgv1qctZXqRgQCT7h9UIn211xFH9s499a8U7O8optaE-Ep
 
 [www.diepxuan.com]
 match = 28.6%%
@@ -149,7 +149,7 @@ url = https://www.kvaser.cn/en/external-link/?url=https://detsad147vrn.ru/m7kv6o
 [www.staleyfarmshomeskc.com]
 match = -92.9%%
 title = Here Is Staley Farms Golf Community In Beautiful North Kansas ...
-url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn--80afptqn.xn--p1ai/5392784wwwsp47euorgc4fe43y
+url = http://www.staleyfarmshomeskc.com/docs/news-frame.asp?title=Here Is Staley Farms Golf Community In Beautiful North Kansas ...&page=https://xn----ctbbfhtdwrbb1ale.xn--p1ai/9618573etpm-internationalcomafe88y
 
 [www.lebguide.com]
 match = -35.7%%
@@ -199,7 +199,7 @@ url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/8264395
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/
+url = https://diepxuan.com/?srsltid=AfmBOorno6gmFOMXCJkq6IgnchIwhEK23P-3rr49qPxqxGuzzFbYZysv
 
 [www.tripadvisor.com]
 match = -50.0%%
