--- a/images/ga-chun-uc-16/config.ini
+++ b/images/ga-chun-uc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-uc-16.html
 lastopen = 2024-06-10 01:12:04
 
 [search]
-lastsearch = 2024-08-05 08:04:19
+lastsearch = 2024-08-05 09:59:17
 
 [bedding.vn]
 match = -123.1%%
@@ -107,9 +107,9 @@ title = Ga chun - Chăn ga gối đệm Phương Bắc
 url = https://changagoidemphuongbac.com/ga-chun/
 
 [profiles.ucsd.edu]
-match = -76.9%%
-title = Mingxiong Huang - UCSD Profiles
-url = https://profiles.ucsd.edu/mingxiong.huang
+match = -69.2%%
+title = Karen Messer | UCSD Profiles
+url = https://profiles.ucsd.edu/karen.messer
 
 [www.mtech.edu]
 match = -61.5%%
@@ -117,9 +117,9 @@ title = jack l. skinner, ph.d., pe
 url = https://www.mtech.edu/mechanical-engineering/faculty/jack-skinner/docs/cv-jack-skinner.pdf
 
 [researchdirectory.uc.edu]
-match = -292.3%%
-title = Chong Ahn - UC Research Directory - University of Cincinnati
-url = https://researchdirectory.uc.edu/p/ahnch
+match = -246.2%%
+title = Expert Profile: James Herman - UC Research Directory
+url = https://researchdirectory.uc.edu/p/hermanjs
 
 [thegioinem.com]
 match = -230.8%%
