--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-08-05 04:31:08
+lastsearch = 2024-08-05 09:58:35
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,8 +17,8 @@ title = Đệm bông ép chính hãng giảm 50 ...
 url = https://demxanh.com/dem-bong-ep.html
 
 [www.ebay.com]
-match = -95.2%%
-title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep ...
+match = -128.6%%
+title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
 url = https://www.ebay.com/itm/256190021356
 
 [www.quora.com]
@@ -27,9 +27,9 @@ title = Vietnamese mixed script
 url = https://www.quora.com/What-are-some-examples-where-Vietnamese-was-written-in-mixed-Han-Latin-script
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
-url = https://sieuthidemonline.vn/dem-cao-su-lavender/
+match = -61.9%%
+title = Đệm Foam Osakawa Everhome - SieuthidemOnline.vn
+url = https://sieuthidemonline.vn/dem-foam-osakawa-everhome/
 
 [thegioidemviet.vn]
 match = -9.5%%
