CI images update

--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-05 09:46:14
+lastsearch = 2024-08-05 10:20:03
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -12,9 +12,9 @@ title = Bộ ga chun My Youth - MY16
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my16/
 
 [songhong.info]
-match = -38.1%%
-title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
-url = https://songhong.info/chan-ga-goi-bc16
+match = -90.5%%
+title = Chăn ga gối không chần bông Basic 100%% cotton mã BC22051
+url = https://songhong.info/chan-ga-goi-khong-chan-bc51
 
 [demxanh.com]
 match = -52.4%%
