--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-05 06:50:55
+lastsearch = 2024-08-05 10:19:02
 
 [demxanh.com]
 match = -22.7%%
 title = Thảm trải giường lông cừu TLC 06 - Hà Nội
-url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOooUL0WgIesGCAwDV4rY4a4IiJ3S5u-2HMagJVKTCqtyCZqkP45E
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 75.0%%
@@ -17,9 +17,9 @@ title = Thảm lông xù 150x190
 url = https://demre.com.vn/tham-long-xu-150x190-2
 
 [decoviet.vn]
-match = 23.8%%
-title = Thảm Sofa Phòng Khách
-url = https://decoviet.vn/tham-phong-khach/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
@@ -44,7 +44,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 [www.diepxuan.com]
 match = 50.0%%
 title = Điệp Xuân Thảm giường nỉ 150x190
-url = https://www.diepxuan.com/tham-giuong-ni-150x190.html?srsltid=AfmBOor1hMYcPE9WmOzzDVnVilUq9Kq6-JSA-7BrZdc_5ypDIGf6C4Le
+url = https://www.diepxuan.com/tham-giuong-ni-150x190.html
 
 [www.lazada.vn]
 match = -77.3%%
@@ -52,9 +52,9 @@ title = Thảm Trải Sofa Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
-match = -59.1%%
-title = Thảm trải chân giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải chân giường
+match = -72.7%%
+title = Mua -THẢM NỈ ĐA NĂNG NHUNG HOA TRẢI GIƯỜNG -GA ...
+url = https://tiki.vn/tham-ni-da-nang-nhung-hoa-trai-giuong-ga-trai-giuong-2in1-giao-mau-ngau-nhien-p68350135.html?spid=68350143
 
 [cafeland.vn]
 match = -45.5%%
