CI images update

--- a/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-200x220-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-200x220-tr.html
 lastopen = 2024-06-07 00:24:25
 
 [search]
-lastsearch = 2024-08-05 05:38:20
+lastsearch = 2024-08-05 10:47:36
 
 [everon.online]
 match = 50.0%%
@@ -22,9 +22,9 @@ title = Mua Bộ ga chun chần bốn mùa Everon EPC22045 ( 01 ...
 url = https://tiki.vn/bo-ga-chun-chan-bon-mua-everon-epc22045-01-ga-chun-chan-01-chan-bon-mua-200x220-02-vo-goi-45x65-p132829385.html?spid=132829392
 
 [everonhanquoc.com.vn]
-match = -26.5%%
-title = Bộ chăn ga Everon ESB - 23021 hứa hẹn sẽ là best seller ...
-url = https://everonhanquoc.com.vn/bo-chan-ga-everon-esb-23021-pd.html
+match = -47.1%%
+title = Bộ chăn ga Everon EST - 23031 là một thiết kế vô cùng tinh tế...
+url = https://everonhanquoc.com.vn/bo-chan-ga-goi-everon-est-23031-giam-gia-pd.html
 
 [everonhn.com.vn]
 match = 25.0%%
@@ -62,9 +62,9 @@ title = Bộ Chăn Ga Everon EPC 22047
 url = https://everon.com.vn/bo-chan-ga-everon-epc-22047/
 
 [tongdailyeveron.com.vn]
-match = 57.1%%
-title = Bộ ga chun chần hoa MDSM2202
-url = https://tongdailyeveron.com.vn/products/bo-ga-chun-chan-mdsm2202
+match = -31.6%%
+title = Bộ Everon EPC 23044
+url = https://tongdailyeveron.com.vn/products/bo-everon-epc-23044
 
 [chandrapsaigon.com]
 match = -8.8%%
@@ -78,8 +78,8 @@ url = https://changagoidemsonghong.com/chan-ga-goi-bc61
 
 [www.everonvn.vn]
 match = -32.4%%
-title = Everon ESB-22051 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-esb22051.html
+title = Everon EST-22031 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-est22031.html
 
 [demxanh.com]
 match = -2.9%%
