--- a/images/chan-cuu-loai-2/config.ini
+++ b/images/chan-cuu-loai-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-cuu-loai-2.html
 lastopen = 2024-06-09 23:05:55
 
 [search]
-lastsearch = 2024-08-05 08:01:34
+lastsearch = 2024-08-05 10:44:25
 
 [tiki.vn]
 match = -133.3%%
@@ -19,7 +19,7 @@ url = https://joliefam.vn/chan-ga-goi-gia-dinh/chan-cuu-phap-joliefam/
 [www.lazada.vn]
 match = -66.7%%
 title = Chăn Lông Cừu 2mx2m2 Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/
+url = https://www.lazada.vn/tag/chan-long-cuu-2mx2m2/?srsltid=AfmBOopYuHYuGAT9zKVRLSHfKbv7sm2C7zQUiGjWxP48JgCma53exBlU
 
 [tokyolife.vn]
 match = -193.3%%
@@ -159,7 +159,7 @@ url = https://audipet.com/cho-chan-cuu-duc.php
 [bibomart.com.vn]
 match = -86.7%%
 title = Chăn lông cừu 2 lớp màu đỏ mận (2m x 2.3m)
-url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html
+url = https://bibomart.com.vn/chan-long-cuu-2-lop-mau-do-man-2m-x-2-3m.html?srsltid=AfmBOoodm7qJMo1Ihu8hh0XBCYJ-qViI_qNMUuzP0RDu-zUnlnPNiFSi
 
 [www.sayweee.com]
 match = -100.0%%
