--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-08-05 04:52:30
+lastsearch = 2024-08-05 10:51:48
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -152,9 +152,9 @@ title = lịch thi đấu sea games 32 ngày 16 tháng 05
 url = https://caodangtkv.edu.vn/Xsn/20240615-77kfuhesoi kèo tài xỉu việt nam malaysia.html
 
 [www.facebook.com]
-match = -156.2%%
-title = TRỰC TIẾP: VÒNG TUYỂN CHỌN AIMAG 2021 - BỘ MÔN ...
-url = https://www.facebook.com/LienquanMobile/videos/-trực-tiếp-vòng-tuyển-chọn-aimag-2021-bộ-môn-liên-quân-mobile-ngày-0308/495572599935074/
+match = -8.3%%
+title = Mai Thanh Hạ
+url = https://www.facebook.com/maithanhha19/
 
 [suckhoedoisong.vn]
 match = -225.0%%
