--- a/images/tham-chan-len-xu-1-50x80/config.ini
+++ b/images/tham-chan-len-xu-1-50x80/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 lastopen = 2024-06-07 00:36:50
 
 [search]
-lastsearch = 2024-08-05 06:52:15
+lastsearch = 2024-08-05 10:49:43
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,9 +12,9 @@ title = Thảm chân len xù 1 50x80
 url = https://www.diepxuan.com/tham-chan-len-xu-1-50x80.html
 
 [tiki.vn]
-match = -41.7%%
-title = Tham chui chan 60x80 hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=tham chui chan 60x80
+match = -33.3%%
+title = Thảm lau chân ULRIC màu Xám Trắng / Nâu 50x80 cm ...
+url = https://tiki.vn/tham-lau-chan-ulric-mau-xam-trang-nau-50x80-cm-100-cotton-index-living-mall-nhap-khau-thai-lan-p272045000.html?spid=272045000
 
 [shopee.vn]
 match = -12.5%%
@@ -37,9 +37,9 @@ title = Thảm lót cửa sợi mịn Shaggy
 url = https://thamht.vn/products/nhan-ban-cua-tham-chui-chan-shaggy-hinh-thoi
 
 [cauhaihomedecor.vn]
-match = 62.5%%
-title = THẢM CHÂN ARTHUR 50X80CM
-url = https://cauhaihomedecor.vn/tham-chan-arthur
+match = 58.3%%
+title = THẢM CHÂN WONDERFUL 50X80CM
+url = https://cauhaihomedecor.vn/tham-chan-wonderful
 
 [www.khotham.com]
 match = -62.5%%
