--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-chun-chan-182m.html
 lastopen = 2024-06-07 00:25:46
 
 [search]
-lastsearch = 2024-08-05 10:31:14
+lastsearch = 2024-08-05 11:23:32
 
 [everon.online]
 match = 12.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [everonchinhhang.vn]
-match = -32.0%%
-title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
-url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
+match = -12.0%%
+title = Bộ ga chun chần Freesia bốn mùa - Everon
+url = https://everonchinhhang.vn/products/bo-ga-chun-chan-freesia-bon-mua
 
 [everonvn.com.vn]
 match = 28.0%%
@@ -152,9 +152,9 @@ title = Mẹ già U70 cõng con trai cao 1,82m suốt 5 năm, cố tập cho ...
 url = https://vietbao.vn/me-gia-u70-cong-con-trai-cao-1-82m-suot-5-nam-co-tap-cho-con-di-bo-491194.html
 
 [m.facebook.com]
-match = -4.0%%
-title = Chính chủ gửi bán căn hộ chung cư ...
-url = https://m.facebook.com/groups/245093786896941/posts/1272667604139549/
+match = -16.0%%
+title = CHỢ CƯ DÂN VINHOMES OCEAN PARK @ | ✅ ...
+url = https://m.facebook.com/groups/357588832255775/posts/1215578123123504/
 
 [dantri.com.vn]
 match = -60.0%%
