--- a/images/chan-hoi-yuki/config.ini
+++ b/images/chan-hoi-yuki/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-yuki.html
 lastopen = 2024-06-10 00:16:36
 
 [search]
-lastsearch = 2024-08-05 06:26:17
+lastsearch = 2024-08-05 11:27:36
 
 [www.instagram.com]
-match = -238.5%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -223.1%%
+title = Yuki Hoi (@hoisoki) • Instagram photos and videos
+url = https://www.instagram.com/hoisoki/?hl=en
 
 [www.linkedin.com]
-match = 23.1%%
-title = Hoi Chan Studio
-url = https://www.linkedin.com/in/yiu-hoi-chan
+match = -192.3%%
+title = Hoi Ki Chan - 2D Game Artist - Omoté Singapore
+url = https://www.linkedin.com/in/hoi-ki-chan-519219147
 
 [www.creativeboom.com]
 match = -307.7%%
@@ -167,8 +167,8 @@ title = Service-Learning Capacity Enhancement in Hong Kong ...
 url = https://link.springer.com/book/10.1007/978-981-19-2437-8
 
 [www.thisiscolossal.com]
-match = -300.0%%
-title = Hoi Chan Translates Everyday Experiences into ... - Colossal
+match = -215.4%%
+title = Hoi Chan Translates Everyday Experiences into ...
 url = https://www.thisiscolossal.com/2024/03/hoi-chan-illustrations/
 
 [www.csus.edu]
