--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-05 09:58:56
+lastsearch = 2024-08-05 11:30:20
 
 [www.youtube.com]
-match = -152.6%%
-title = Hoa Mộc Hương ta nở bao lâu thì tàn - Khi nào lập lại hoa?
-url = https://www.youtube.com/watch?v=IL1ZIO7fIro
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [trangtrisanvuon.vn]
 match = -147.4%%
