--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-05 05:33:49
+lastsearch = 2024-08-05 11:27:15
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -146.2%%
@@ -117,9 +117,9 @@ title = States that have Adopted California's Vehicle Regulations
 url = https://ww2.arb.ca.gov/our-work/programs/advanced-clean-cars-program/states-have-adopted-californias-vehicle-regulations
 
 [www.deutschconnectorstore.com]
-match = -253.8%%
-title = 0462-201-16141 | Deutsch/TE | SIze 16 Contact 20-16 Ga
-url = https://www.deutschconnectorstore.com/p-79-deutsch-0462-201-16141-contact-20-16-ga.html
+match = -200.0%%
+title = Deutsch 0460-202-16141 Size 16 Contact 16-20 Ga
+url = https://www.deutschconnectorstore.com/p-70-deutsch-0460-202-16141-contact-20-16-ga.html
 
 [www.saflii.org]
 match = -200.0%%
@@ -234,7 +234,7 @@ url = https://www.ipassio.com/blog/list-of-ragas-in-indian-classical-music
 [www.partstown.com]
 match = -215.4%%
 title = Henny Penny EC05-001 TERM RING #10 16-14 GA NI PL
-url = https://www.partstown.com/henny-penny/henec05-001?srsltid=AfmBOooxLm6casG4kh8rlpwNDriq0FGOlrXE6x3ogBzWfhQ-z15u5eyj
+url = https://www.partstown.com/henny-penny/henec05-001
 
 [pubs.acs.org]
 match = -338.5%%
@@ -253,8 +253,8 @@ url = https://www.denverpost.com/author/georgia-nicols/
 
 [www.prowireusa.com]
 match = -200.0%%
-title = Deutsch 0462-201-20141 Size20 Contact 22-18 Ga
-url = https://www.prowireusa.com/p-81-deutsch-0462-201-20141-contact-22-18-ga.html
+title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
+url = https://www.prowireusa.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
 
 [www.icc-cpi.int]
 match = -92.3%%
@@ -699,5 +699,5 @@ url = https://www.parker.com/content/dam/Parker-com/Literature/Sporlan/Sporlan-p
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T08/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOoqITgtr8yc8RWUBUKANHuxCYthvYOx8K7jNXfKzzbBNqhsuTQZ-
+url = https://www.lazada.vn/tag/ga-ni-long/
 
