CI images update

--- a/images/man-re-trang-10/config.ini
+++ b/images/man-re-trang-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-10.html
 lastopen = 2024-06-07 00:52:54
 
 [search]
-lastsearch = 2024-08-05 01:22:39
+lastsearch = 2024-08-05 11:43:00
 
 [burningman.org]
 match = 0.0%%
@@ -704,7 +704,7 @@ url = https://wayne.edu/
 [www.usnews.com]
 match = 0.0%%
 title = 
-url = https://www.usnews.com/best-colleges/university-of-california-irvine-1314
+url = https://www.usnews.com/best-colleges/jhu-2077/overall-rankings
 
 [www.legodiscoverycenter.com]
 match = -186.7%%
@@ -895,4 +895,9 @@ url = https://www.congress.gov/member/district/mark-desaulnier/D000623
 match = -226.7%%
 title = Lexington Herald Leader: Lexington KY Breaking News & Sports
 url = https://www.kentucky.com/
+
+[www.kitetails.org]
+match = -93.3%%
+title = Children's Museum & Theatre of Maine
+url = https://www.kitetails.org/
 
