--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-05 10:44:30
+lastsearch = 2024-08-05 11:34:20
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Happiness Việt Nam | Hanoi
 url = https://www.facebook.com/changahappinessvn/
 
 [shopee.vn]
-match = -21.4%%
-title = Bộ ga gối trải giường 2m2x2m bo chun miễn phí, bộ ...
-url = https://shopee.vn/Bộ-ga-gối-trải-giường-2m2x2m-bo-chun-miễn-phí-bộ-ga-giường-cotton-poly-mềm-mịn-thấm-hút-mồ-hôi-Happy-Home-i.600110082.20851466621
+match = 3.6%%
+title = Bộ Chăn Ga Gối Cotton Poly 4 món - Happy Bedding
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-4-món-Bộ-chăn-ga-bộ-ga-giường-drap-nệm-mền-Happy-Bedding-(Miễn-phí-bo-chun)-i.483546614.10240511269
 
 [chandem.com.vn]
 match = 17.9%%
@@ -37,9 +37,9 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 50.0%%
-title = Bộ Ga chun chần EPM21071
-url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
+match = 10.7%%
+title = Bộ ga chun chần bốn mùa Happy Town EPC23048
+url = https://happynest.vn/shop/EBGCTBMEPC23048/bo-ga-chun-chan-bon-mua-happy-town-epc23048.html
 
 [chuyenhangviet.com]
 match = -25.0%%
