--- a/images/bo-phu-mau-160x200/config.ini
+++ b/images/bo-phu-mau-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-phu-mau-160x200.html
 lastopen = 2024-06-17 03:11:36
 
 [search]
-lastsearch = 2024-08-05 06:53:42
+lastsearch = 2024-08-05 11:47:27
 
 [tiki.vn]
 match = -138.9%%
@@ -42,9 +42,9 @@ title = Bộ ga chun Cotton chống thấm màu xanh đậm
 url = https://demxanh.com/bo-ga-chun-cotton-chong-tham-mau-xanh-dam.html
 
 [foreverbedding.net]
-match = -66.7%%
-title = Bộ ga phủ Passion A114 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-phu-passion-a114
+match = -61.1%%
+title = Bộ ga phủ Mystic-T 26 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-phu-mystic-t-26
 
 [aeoneshop.com]
 match = -105.6%%
