--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-05 06:21:25
+lastsearch = 2024-08-05 11:32:56
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -58,8 +58,8 @@ url = https://books.google.com/books?id=kRi_BKq60OgC&pg=PA187&lpg=PA187&dq=chi+u
 
 [www.travelweekly.com]
 match = -87.0%%
-title = Ho Chi Minh City Hotels Near Jade Emperor Pagoda- Page 10
-url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Hotels-Near-Jade-Emperor-Pagoda-p4247472?s=2+u3NLAzhVE=u&pg=10
+title = Hotels Near Roseland Corp Hotel, Ho Chi Minh City- Page 10
+url = https://www.travelweekly.com/Hotels/Ho-Chi-Minh-City-Vietnam/Roseland-Corp-Hotel-p55100311,Nearby-Hotels?pg=10
 
 [sonoivu.thaibinh.gov.vn]
 match = -78.3%%
