--- a/images/tham-chan-len-xu-1-60x90/config.ini
+++ b/images/tham-chan-len-xu-1-60x90/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-60x90.html
 lastopen = 2024-06-07 00:36:31
 
 [search]
-lastsearch = 2024-08-05 05:40:03
+lastsearch = 2024-08-05 11:44:41
 
 [shopee.vn]
-match = 4.2%%
-title = THẢM CHÙI CHÂN WELCOME CỠ ĐẠI 60x90CM, ...
-url = https://shopee.vn/THẢM-CHÙI-CHÂN-WELCOME-CỠ-ĐẠI-60x90CM-Thảm-lau-chân-Khách-Sạn-Siêu-Thị-Điện-Máy-Tòa-Nhà-Lớn-i.164381765.7711779537
+match = -75.0%%
+title = Thảm lau chân cửa ra vào sọc ô vuông Fesson PVC 45x75 ...
+url = https://shopee.vn/Thảm-lau-chân-cửa-ra-vào-sọc-ô-vuông-Fesson-PVC-45x75-60x90-90x150cm-120x180-i.410234498.17626537010
 
 [thamsofanhapkhau.com]
 match = -87.5%%
@@ -73,7 +73,7 @@ url = https://thamvinhthuan.com/san-pham/tham-chui-chan-welcome/
 
 [thamnhuachuichan.com]
 match = -20.8%%
-title = Thảm Nhựa Welcome 60×90 - thamnhuachuichan
+title = Thảm Nhựa Welcome 60x90 - thamnhuachuichan
 url = https://thamnhuachuichan.com/tham-nhua-welcome-60x90.html
 
 [thamht.vn]
