CI images update

--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-05 03:58:05
+lastsearch = 2024-08-05 11:45:58
 
 [www.everonvn.vn]
-match = -105.0%%
-title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
-url = https://www.everonvn.vn/san-pham/dem-everon.html
+match = 20.0%%
+title = Đệm bông Everon 1m, 1m2, 1m4
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
 
 [everon.vip]
 match = 50.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOor31RFaGloNKL71ueeZuynxwYokk5cj2gSAvtqtgoEjYxUo7Lia
+url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOoqOG3U7TsGgFt1qdmBKzswH2-tqIfCm65q1bVVDPX8PWcvu8i4f
 
 [demqueensweet.com]
 match = -65.0%%
@@ -54,12 +54,12 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOortTMGxFPhWcxjZEmJu_gmauye6n5B5Vt1fEykzWGsrtZjnMGiQ
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOoplBBiUtghHlNxytIb-Xqn2-sfQfohDk_O81d6Me-dYeHNoI80N
 
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOopGSmVy6QGXd00N6TeOnoseqNvX2c4bQWlNkM4LtpIJx4Gz7PbY
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOoqfR8MmSvn7pU2hY56c41fK0DOIs34ih346mXjlu7wlhIDbYKeo
 
 [www.diepxuan.com]
 match = 0.0%%
