--- a/images/chieu-lac-soc-08/config.ini
+++ b/images/chieu-lac-soc-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-08.html
 lastopen = 2024-06-06 16:42:06
 
 [search]
-lastsearch = 2024-08-05 11:26:37
+lastsearch = 2024-08-05 11:46:19
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [www.facebook.com]
-match = -131.2%%
-title = CHƯƠNG TRÌNH LỤC LẠC VÀNG VẾ VỚI XÃ MỸ THUẬN ...
-url = https://www.facebook.com/soctrangtv/videos/chương-trình-lục-lạc-vàng-vế-với-xã-mỹ-thuận-huyện-mỹ-tú-tỉnh-sóc-trăng-phát-són/1649583821733030/
+match = -187.5%%
+title = 08-11-2022 Thời sự chiều 18h30 | By Truyền Hình Sóc Trăng
+url = https://www.facebook.com/soctrangtv/videos/08-11-2022-thời-sự-chiều-18h30/1168759537402748/
 
 [thuvienphapluat.vn]
 match = -206.2%%
@@ -433,8 +433,8 @@ url = https://suckhoedoisong.vn/di-xe-dap-nguoc-chieu-tren-cao-toc-1-cau-be-di-l
 
 [www.cgv.vn]
 match = 6.2%%
-title = CGV Aeon Bình Tân
-url = https://www.cgv.vn/default/cinox/site/cgv-aeon-binh-tan
+title = CGV Buôn Mê Thuột
+url = https://www.cgv.vn/default/cinox/site/cgv-buon-me-thuot
 
 [developers.cloudflare.com]
 match = -31.2%%
