--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-05 11:45:58
+lastsearch = 2024-08-05 12:19:36
 
 [www.everonvn.vn]
-match = 20.0%%
-title = Đệm bông Everon 1m, 1m2, 1m4
-url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
+match = -105.0%%
+title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
+url = https://www.everonvn.vn/san-pham/dem-everon.html
 
 [everon.vip]
 match = 50.0%%
@@ -44,7 +44,7 @@ url = https://everon365.vn/dem-bong-ep-everon-ha-noi.html
 [everon.com.vn]
 match = -80.0%%
 title = 120*200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOoqOG3U7TsGgFt1qdmBKzswH2-tqIfCm65q1bVVDPX8PWcvu8i4f
+url = https://everon.com.vn/kich-co/120200/?srsltid=AfmBOoogGUgpuqk1F_OLeAYYPEqNjCrWxmmDeK8zD8eKbK_u_w8J-rJP
 
 [demqueensweet.com]
 match = -65.0%%
@@ -54,12 +54,12 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOoplBBiUtghHlNxytIb-Xqn2-sfQfohDk_O81d6Me-dYeHNoI80N
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOopc3-C2Tvp2-fVVeMrPwIOXhoyhL-t_eipji8vsb4gNJrOjMRsi
 
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOoqfR8MmSvn7pU2hY56c41fK0DOIs34ih346mXjlu7wlhIDbYKeo
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop30gUbN84P35f_JtdePZr4YA_C2FFA6VsZzMHAW9GEs95wQKr7
 
 [www.diepxuan.com]
 match = 0.0%%
