--- a/images/chieu-nhua-thai-binh-16/config.ini
+++ b/images/chieu-nhua-thai-binh-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-16.html
 lastopen = 2024-06-09 23:16:27
 
 [search]
-lastsearch = 2024-08-05 06:44:05
+lastsearch = 2024-08-05 12:17:32
 
 [www.lazada.vn]
 match = -60.9%%
@@ -17,14 +17,14 @@ title = Chiếu Nhựa Thái Bình | Thanh Hóa
 url = https://www.facebook.com/chieunhuathaibinh/?locale=vi_VN
 
 [www.sendo.vn]
-match = 34.8%%
-title = Chiếu nhựa thái bình 1m x 1m9 - chieu
-url = https://www.sendo.vn/chie-u-nhu-a-tha-i-bi-nh-1m-x-1m9-43896854.html
+match = -34.8%%
+title = Chiếu Nhựa Chung Anh Thái Bình Giá Tốt, Mua Khỏi ...
+url = https://www.sendo.vn/chieu-nhua-chung-anh-thai-binh.htm
 
 [shopee.vn]
-match = -39.1%%
-title = Chiếu Nhựa Thái Bình-Việt Nam Đa Dạng Kích Cỡ-Mầu Sắc
-url = https://shopee.vn/Chiếu-Nhựa-Thái-Bình-Việt-Nam-Đa-Dạng-Kích-Cỡ-Mầu-Sắc-i.674166358.24176394117
+match = -78.3%%
+title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
+url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [trangvangvietnam.com]
 match = 21.7%%
