--- a/images/chieu-nhua-thai-binh-gt-180x200/config.ini
+++ b/images/chieu-nhua-thai-binh-gt-180x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-180x200.html
 lastopen = 2024-08-01 05:18:22
 
 [search]
-lastsearch = 2024-08-05 02:16:02
+lastsearch = 2024-08-05 12:33:55
 
 [shopee.vn]
-match = 12.9%%
-title = 25.9 Sale Cuối Tháng Đón Lương Về
-url = https://shopee.vn/m/25-9-sale-cuoi-thang-don-luong-ve
+match = 29.0%%
+title = Chiếu nhựa (quê hương thái bình)kt 1m6 và 1m8
+url = https://shopee.vn/Chiếu-nhựa-(quê-hương-thái-bình)kt-1m6-và-1m8-i.143185988.9645236178
 
 [tiki.vn]
 match = 48.4%%
@@ -17,14 +17,14 @@ title = Mua chiếu nhựa thái bình bền đẹp đủ cỡ
 url = https://tiki.vn/chie-u-nhu-a-tha-i-bi-nh-ben-dep-du-co-p182155456.html?spid=182155480
 
 [www.diepxuan.com]
-match = 41.9%%
-title = Chiếu nhựa Hà Nội GT 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-gt-180x200.html
+match = 58.1%%
+title = Chiếu nhựa Thái Bình GT 160x200 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-gt-160x200.html
 
 [m.facebook.com]
-match = 9.7%%
-title = Hội Sales Quảng Bình 73 | Chào cả nhà
-url = https://m.facebook.com/groups/251202215303340/posts/858519194571636/
+match = -6.5%%
+title = SANG NHƯỢNG + MUA BÁN TIỆM QUÁN Ở CHLB ĐỨC
+url = https://m.facebook.com/groups/1110093975748337/posts/7873087172782283/
 
 [trangvangvietnam.com]
 match = 20.0%%
@@ -105,4 +105,9 @@ url = https://my.unlv.nevada.edu/psp/lvporprd_10/EMPLOYEE/SA/e/?url=https://xn--
 match = 6.5%%
 title = khuyến mãi từ 01.09.2022 đến 14.09.2022
 url = https://www.emart.com.vn/wp-content/uploads/2022/08/EPOST2218_SIEU_KHUYEN_MAI_MUNG_LE_LON.pdf
+
+[portal.vietcombank.com.vn]
+match = 9.7%%
+title = UP TO 50%% TỪ NGÀY 22/12-05/01/2023
+url = https://portal.vietcombank.com.vn/content/personal/KhoAnh/Anh CTKM/2022_Danh muc san pham uu dai Nhaxinh.pdf
 
