--- a/images/ga-ni-long-14/config.ini
+++ b/images/ga-ni-long-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-14.html
 lastopen = 2024-06-10 00:50:06
 
 [search]
-lastsearch = 2024-08-05 12:24:01
+lastsearch = 2024-08-05 12:33:13
 
 [www.galottery.com]
 match = -7.7%%
@@ -510,4 +510,9 @@ url = https://www.gntc.edu/
 match = -169.2%%
 title = List of CARB-Certified Air Cleaning Devices
 url = https://ww2.arb.ca.gov/list-carb-certified-air-cleaning-devices
+
+[www.peachtree-city.org]
+match = -215.4%%
+title = Library | Peachtree City, GA - Official Website
+url = https://www.peachtree-city.org/1447/Library
 
