--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-08-05 11:34:20
+lastsearch = 2024-08-05 12:43:24
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = Bộ ga gối chun chan happy 16
 url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 
 [www.facebook.com]
-match = 7.7%%
-title = Happiness Việt Nam | Hanoi
-url = https://www.facebook.com/changahappinessvn/
+match = 23.8%%
+title = Chăn ga gối đệm happy
+url = https://www.facebook.com/Changaxuattaikho/
 
 [shopee.vn]
-match = 3.6%%
-title = Bộ Chăn Ga Gối Cotton Poly 4 món - Happy Bedding
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Poly-4-món-Bộ-chăn-ga-bộ-ga-giường-drap-nệm-mền-Happy-Bedding-(Miễn-phí-bo-chun)-i.483546614.10240511269
+match = -46.4%%
+title = [SP mới] Bộ ga gối poly cotton ga kí túc xá kích thước ...
+url = https://shopee.vn/-SP-mới-Bộ-ga-gối-poly-cotton-ga-kí-túc-xá-kích-thước-80x190cm-drap-nệm-ga-giường-đơn-ga-chun-trải-giường-i.483546614.20369429874
 
 [chandem.com.vn]
 match = 17.9%%
@@ -52,9 +52,9 @@ title = Bộ chăn ga gối Everon EPC 23048
 url = http://everonhanquoc.vn/everon/13832/bo-chan-ga-goi-everon-epc-23048
 
 [hanvico.com.vn]
-match = 38.5%%
-title = Bộ ga chun My Youth - MY16
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my16/
+match = -100.0%%
+title = Chăn Ga Gối
+url = https://hanvico.com.vn/danh-muc/chan-ga-goi/
 
 [everonvn.com.vn]
 match = 17.4%%
