--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-05 06:27:44
+lastsearch = 2024-08-05 12:44:28
 
 [www.dem365.vn]
-match = -61.9%%
-title = Chăn Giá Rẻ Chăn Phao Siêu Nhẹ - Chăn Ga Gối Đệm 365
-url = https://www.dem365.vn/chan-gia-re-chan-phao-sieu-nhe/
+match = -81.0%%
+title = Chăn Phao Siêu Nhẹ Mẫu Mã Đa Dạng - Chăn Ga Gối Đệm 365
+url = https://www.dem365.vn/chan/chan-phao-mau-ma-da-dang-de-lua-chon/
 
 [www.demgiare.net]
 match = -4.8%%
@@ -17,9 +17,9 @@ title = Chăn phao Poly giá rẻ giá 200k, 250k
 url = https://www.demgiare.net/chan-phao-poly-gia-re.html
 
 [shopee.vn]
-match = -52.4%%
-title = Chăn phao - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
-url = https://shopee.vn/list/chăn phao
+match = 0.0%%
+title = HẠT CHẶN PHAO LOẠI 6 HẠT SIÊU RẺ
+url = https://shopee.vn/HẠT-CHẶN-PHAO-LOẠI-6-HẠT-SIÊU-RẺ-i.167222325.12107796108
 
 [suongtuyet.com]
 match = 28.6%%
