--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-05 04:53:52
+lastsearch = 2024-08-05 12:40:34
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = -175.0%%
-title = Sơ lược về làng nghề dệt chiếu tại Long Định - Cần Đước
-url = https://m.facebook.com/notes/cộng-đồng-long-an/sơ-lược-về-làng-nghề-dệt-chiếu-tại-long-định-cần-đước/402374479949088/
+match = 22.2%%
+title = Chieu Lac
+url = https://m.facebook.com/chieu.lac.73/
 
 [baolongan.vn]
 match = -125.0%%
@@ -355,4 +355,29 @@ url = https://www.qdnd.vn/the-thao/trong-nuoc/binh-luan-moi-cay-moi-hoa-787996
 match = -175.0%%
 title = Thủ môn người Nghệ An được Hồng Lĩnh Hà Tĩnh chiêu mộ
 url = https://baonghean.vn/thu-mon-nguoi-nghe-an-duoc-hong-linh-ha-tinh-chieu-mo-10277545.html
+
+[sustainabledevelopment.un.org]
+match = -150.0%%
+title = VIET NAM'S VOLUNTARY NATIONAL REVIEW ON THE ...
+url = https://sustainabledevelopment.un.org/content/documents/19967VNR_of_Viet_Nam.pdf
+
+[partner.hdbank.com.vn]
+match = 6.2%%
+title = Network - HDBank
+url = https://partner.hdbank.com.vn/Default.aspx?ArticleId=b9b9f686-49e9-46bc-b409-5b51ef55ea01
+
+[shinhan.com.vn]
+match = -7.7%%
+title = BACH HOA XANH
+url = https://shinhan.com.vn/public/uploads/card/DEBIT_2024/SHINHAN ZONE/BACH HOA XANH - EN_compressed.pdf
+
+[issuu.com]
+match = -118.8%%
+title = Tay Ho Times November 2016 by Nada Offner
+url = https://issuu.com/nadaoffner/docs/tay_ho_times_november_2016
+
+[shop.vinfastauto.com]
+match = -181.2%%
+title = VinFast Theon S: Latest Specifications and Offers 2024
+url = https://shop.vinfastauto.com/vn_en/xe-may-dien-theon-s.html
 
