--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-05 12:19:36
+lastsearch = 2024-08-05 12:47:19
 
 [www.everonvn.vn]
-match = -105.0%%
-title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
-url = https://www.everonvn.vn/san-pham/dem-everon.html
+match = 20.0%%
+title = Đệm bông Everon 1m, 1m2, 1m4
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m-1m2-1m4.html
 
 [everon.vip]
 match = 50.0%%
@@ -54,12 +54,12 @@ url = https://demqueensweet.com/
 [www.lazada.vn]
 match = -125.0%%
 title = Nệm( Đệm) bông ép Everon gấp 3 tiện lợi dễ di chuyển ...
-url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOopc3-C2Tvp2-fVVeMrPwIOXhoyhL-t_eipji8vsb4gNJrOjMRsi
+url = https://www.lazada.vn/products/nem-dem-bong-ep-everon-gap-3-tien-loi-de-di-chuyen-thoang-mat-i901864094.html?srsltid=AfmBOop7aMI8OsAv-FYvHKcHotLD1FUjz_xGCLoQNCF9r5HTNpr36B6V
 
 [ru9.vn]
 match = -150.0%%
 title = Nệm lò xo 1m2 giá bao nhiêu? Bảng giá các thương hiệu tốt
-url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop30gUbN84P35f_JtdePZr4YA_C2FFA6VsZzMHAW9GEs95wQKr7
+url = https://ru9.vn/blogs/magazine/nem-lo-xo-1m2-gia-bao-nhieu?srsltid=AfmBOop-uCy8fs09qLj0DsTWUJ4Gt5G053P0QcfSZ9LkwA0wD1rpGPIT
 
 [www.diepxuan.com]
 match = 0.0%%
@@ -139,7 +139,7 @@ url = https://www.sieuthinem.vn/nem-everon.html
 [vuanem.com]
 match = -45.0%%
 title = Chăn Ga Gối Nệm Everon Chính Hãng Giá Rẻ
-url = https://vuanem.com/brand/everon
+url = https://vuanem.com/brand/everon?srsltid=AfmBOorDstcAXSMLC7UWP2aZG1kiM4n6H8MOzKosbLh02JaYhguBVR7Q
 
 [www.khodemthanhdo.com]
 match = -20.0%%
