--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-08-05 10:47:14
+lastsearch = 2024-08-05 12:39:32
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [demxanh.com]
 match = -44.0%%
 title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
+url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html?srsltid=AfmBOopZAjDINuNqTB58CjfwmW1z8FpG-g7JWrNYO4_LcFG1-yC6Ju6f
 
 [khodem.vn]
 match = 8.0%%
@@ -114,7 +114,7 @@ url = https://demeverhome.com/san-pham/ruot-goi/
 [thegioidemonline.com]
 match = 4.0%%
 title = Bảng giá chăn ga gối Everhome năm 2022
-url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html
+url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html?srsltid=AfmBOoq3H5_RicgGFQciYqeV3s4AKS2zvdWRp3KlcFmbaFnGXgnL8zWg
 
 [thegioidemdep.com]
 match = -24.0%%
