--- a/images/tham-chan-len-xu-1-40x60/config.ini
+++ b/images/tham-chan-len-xu-1-40x60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 lastopen = 2024-06-07 00:36:02
 
 [search]
-lastsearch = 2024-08-05 04:20:13
+lastsearch = 2024-08-05 12:41:59
 
 [shopee.vn]
 match = -8.3%%
@@ -47,9 +47,9 @@ title = Thảm chân len xù 1 40x60
 url = https://www.diepxuan.com/tham-chan-len-xu-1-40x60.html
 
 [www.lazada.vn]
-match = -83.3%%
-title = Thảm lau chùi chân chống trơn trượt sợi len siêu mịn kích ...
-url = https://www.lazada.vn/products/tham-lau-chui-chan-chong-tron-truot-soi-len-sieu-min-kich-thuoc-40x60cm-tham-lau-chan-tham-hut-tot-tham-lau-chui-chan-i1603764008.html
+match = -75.0%%
+title = Thảm nỉ lau chân hình chữ nhật, chùi chân len mềm mịn ...
+url = https://www.lazada.vn/products/tham-ni-lau-chan-hinh-chu-nhat-chui-chan-len-mem-min-day-dan-chong-tron-truot-hang-chat-luong-cao-i2478711937.html
 
 [megahomevietnam.com]
 match = 20.0%%
