--- a/images/vo-chan-ks-uc-24-23/config.ini
+++ b/images/vo-chan-ks-uc-24-23/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-24-23.html
 lastopen = 2024-06-10 00:37:18
 
 [search]
-lastsearch = 2024-08-05 08:15:31
+lastsearch = 2024-08-05 12:38:50
 
 [gobearcats.com]
 match = -142.1%%
@@ -132,9 +132,9 @@ title = licensed-electricians.pdf
 url = https://home.nyc.gov/assets/buildings/pdf/licensed-electricians.pdf
 
 [profiles.ucsd.edu]
-match = -10.5%%
-title = Gary Vilke | UCSD Profiles
-url = https://profiles.ucsd.edu/gary.vilke
+match = -21.4%%
+title = Kathleen Fisch
+url = https://profiles.ucsd.edu/kathleen.fisch
 
 [som.cuanschutz.edu]
 match = -110.5%%
@@ -327,8 +327,8 @@ title =
 url = https://www.quadeducationgroup.com/blog/how-to-get-into-uc-davis
 
 [avantilipids.com]
-match = -84.2%%
-title = 18:1 (Δ9-Cis) PC (DOPC) | 4235-95-4 | Avanti
+match = -42.1%%
+title = 18:1 (Δ9-Cis) PC (DOPC) | 4235-95-4
 url = https://avantilipids.com/product/850375
 
 [www.prepscholar.com]
