--- a/images/vo-goi-vuong-uc/config.ini
+++ b/images/vo-goi-vuong-uc/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-vuong-uc.html
 lastopen = 2024-06-06 16:45:20
 
 [search]
-lastsearch = 2024-08-05 06:54:25
+lastsearch = 2024-08-05 12:40:55
 
 [www.lazada.vn]
-match = -193.3%%
-title = [Hot shxliuuioixoe 522] rồng Úc vỏ gối vuông vải lanh ...
-url = https://www.lazada.vn/products/hot-shxliuuioixoe-522-rong-uc-vo-goi-vuong-vai-lanh-polyester-nhung-mo-hinh-zip-goi-tua-lung-trang-tri-truong-hop-boc-goi-giuong-ngu-ban-buon-i2559065940.html?srsltid=AfmBOoqchdXNivIdGeNdsaYUJPa2m90HS6RJun33yrGhUyIG6sZQtj5d
+match = -46.7%%
+title = Vỏ Gối Vuông 60x60 Giá Tốt T07/2024
+url = https://www.lazada.vn/tag/vo-goi-vuong-60x60/
 
 [shopee.vn]
 match = 13.3%%
@@ -24,12 +24,12 @@ url = https://jysk.vn/vo-goi-trang-tri?srsltid=AfmBOooJthl5tBgy9TWfdQhPLA2ZAEXQI
 [chus.vn]
 match = -173.3%%
 title = Vỏ Gối Vuông H'mông, Thổ Cẩm PIÊU - Brocade Decor - CHUS
-url = https://chus.vn/vo-goi-vuong-hmong/?srsltid=AfmBOoql9OBCqs_BeXGBkZVLPh4UnHSWRcSuiAZoqdoVzhH5bfiGLXks
+url = https://chus.vn/vo-goi-vuong-hmong/
 
 [ninhouse.vn]
 match = -106.7%%
 title = Mua vỏ gối nằm | Áo gối ngủ đẹp giá rẻ ...
-url = https://ninhouse.vn/collections/vo-goi-nam?srsltid=AfmBOorUY2h8ckFLwkar6f_ubhyEskezZ1P-_yNajVomwadp8VqYOzNt
+url = https://ninhouse.vn/collections/vo-goi-nam
 
 [lepetit.com.vn]
 match = -173.3%%
@@ -175,4 +175,9 @@ url = https://www.muji.com/vn/products/section/E30004
 match = -200.0%%
 title = đá gà thomo ngày 15 thắng 10 - v2.14.47【For88.Com】
 url = https://sinhvien.ufm.edu.vn/hotFerrID.html
+
+[foreverbedding.net]
+match = -153.3%%
+title = Bộ Sưu Tập Vỏ Gối Cao Cấp Đẹp Mê Ly Tại FOREVER
+url = https://foreverbedding.net/vo-goi
 
