CI images update

--- a/images/ruot-goi-ke-hoa-45x65/config.ini
+++ b/images/ruot-goi-ke-hoa-45x65/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 lastopen = 2024-08-01 06:54:03
 
 [search]
-lastsearch = 2024-08-05 11:33:59
+lastsearch = 2024-08-05 12:48:04
 
 [www.everonvn.vn]
-match = -95.2%%
-title = Bảng giá các kích thước ruột gối Everon Standard Soft
-url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-standard-soft.html
+match = 4.8%%
+title = Ruột gối thư giãn cổ Micro Relax
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-thu-gian-co-micro-relax.html
 
 [shopee.vn]
-match = 9.5%%
-title = Ruột gối nằm họa tiết 45x65 cm (2 cái)
-url = https://shopee.vn/Ruột-gối-nằm-họa-tiết-45x65-cm-(2-cái)-i.296367103.4366623872
+match = -81.0%%
+title = Ruột gối osin bông cứng 45x65. Dành cho người thích ...
+url = https://shopee.vn/Ruột-gối-osin-bông-cứng-45x65.-Dành-cho-người-thích-nằm-gối-cứng-”3-i.435075614.3489785530
 
 [www.diepxuan.com]
 match = 42.9%%
 title = Ruột gối kê hoa 45x65 - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html?srsltid=AfmBOopmKdjOkXGihc7gVguRgcFnFlvKXp0HfGMORcAZ7TqbFZBknoZE
+url = https://www.diepxuan.com/ruot-goi-ke-hoa-45x65.html
 
 [elambo.vn]
 match = -90.5%%
@@ -34,12 +34,12 @@ url = https://suongtuyet.com/ruot-goi-standard-everon-45-x-65-cm
 [www.lazada.vn]
 match = -85.7%%
 title = Ruột gối đầu hoa nhí ruột gối nằm cao cấp kích thước 45x65
-url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html?srsltid=AfmBOoraaP_nYgc8bCqGqnK5p_goEhl3u7qkWzONDIzb-Wnk98uaLoEg
+url = https://www.lazada.vn/products/ruot-goi-dau-hoa-nhi-ruot-goi-nam-cao-cap-kich-thuoc-45x65-i1443371481.html
 
 [demxanh.com]
 match = -81.0%%
 title = Ruột gối Kim Cương chính hãng giá tốt nhất thị trường
-url = https://demxanh.com/ruot-goi-kim-cuong.html?srsltid=AfmBOoraWB1fWWmXze2X5ZjrlGKwvLozd_PUYQZEBHNfO4xkTSkYBkh6
+url = https://demxanh.com/ruot-goi-kim-cuong.html
 
 [demhong.vn]
 match = -33.3%%
