--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-08-05 11:27:57
+lastsearch = 2024-08-05 12:47:43
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -12,9 +12,9 @@ title = Chan cocoo - Freelance (Self employed)
 url = https://hk.linkedin.com/in/chan-cocoo-2aa4362b1
 
 [www.instagram.com]
-match = -230.8%%
-title = Hoi Chan (@hoichandraws) • Instagram photos and videos
-url = https://www.instagram.com/hoichandraws/?hl=en
+match = -38.5%%
+title = Coco Chan (@nataliecocochan)
+url = https://www.instagram.com/nataliecocochan/?hl=en
 
 [www.solunafineart.com]
 match = -22.2%%
@@ -27,8 +27,8 @@ title = Coco Lee
 url = https://en.wikipedia.org/wiki/Coco_Lee
 
 [www.sassymamahk.com]
-match = -200.0%%
-title = That Mama: Coco Chan, Founder Of Voltage PR ...
+match = -246.2%%
+title = That Mama: Coco Chan, Founder Of Voltage PR And Co- ...
 url = https://www.sassymamahk.com/coco-chan-voltage-pr-omsa-family-life/
 
 [www.tiktok.com]
