--- a/images/ga-phu-uc-16/config.ini
+++ b/images/ga-phu-uc-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-uc-16.html
 lastopen = 2024-06-07 01:01:59
 
 [search]
-lastsearch = 2024-08-05 06:40:44
+lastsearch = 2024-08-05 12:55:35
 
 [us.misumi-ec.com]
 match = -325.0%%
 title = GA16-16-6 | Enclosures - ABS Box, Water/Dust Proof, GA ...
-url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6&srsltid=AfmBOorTjLInoe1eITIlDQXGYTokLilH9AtfikKzx6SAk2k4anbl7QhV
+url = https://us.misumi-ec.com/vona2/detail/222000229166/?HissuCode=GA16-16-6
 
 [www.amazon.com]
 match = -91.7%%
@@ -27,9 +27,9 @@ title = Phu Ha - Lawrenceville, Georgia, United States
 url = https://www.linkedin.com/in/phu-ha-b87850148
 
 [www.gwhospital.com]
-match = 0.0%%
-title = 
-url = https://www.gwhospital.com/about
+match = -275.0%%
+title = Welcome to GW University Hospital | Washington, DC
+url = https://www.gwhospital.com/
 
 [finance.saccounty.gov]
 match = -150.0%%
@@ -167,9 +167,9 @@ title = Find an Agent for UCD | View our International Agents
 url = https://www.ucd.ie/global/agents/
 
 [dnr.maryland.gov]
-match = -166.7%%
-title = Early Detection Species for Central MD
-url = https://dnr.maryland.gov/wildlife/Documents/Early_Detection_Species_for_CentralMD.pdf
+match = -175.0%%
+title = Early Detection Species for Southern MD
+url = https://dnr.maryland.gov/wildlife/Documents/Early_Detection_Species_for_SouthernMD.pdf
 
 [www.presidency.ucsb.edu]
 match = -266.7%%
