--- a/images/ruot-nem-korea-9f-15-19/config.ini
+++ b/images/ruot-nem-korea-9f-15-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-15-19.html
 lastopen = 2024-06-10 00:18:43
 
 [search]
-lastsearch = 2024-08-05 11:37:47
+lastsearch = 2024-08-05 12:57:17
 
 [www.diepxuan.com]
 match = -60.9%%
@@ -12,9 +12,9 @@ title = Điệp Xuân Ruột Korea - Chăn ga gối đệm Điệp Xuân
 url = https://www.diepxuan.com/nem-bong/ruot-korea.html
 
 [www.reddit.com]
-match = -82.6%%
-title = Kog'Maw means sweet potato in Korean (고구마). Any ...
-url = https://www.reddit.com/r/leagueoflegends/comments/5qvb2u/kogmaw_means_sweet_potato_in_korean_고구마_any_other/
+match = -87.0%%
+title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
+url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [www.southpasadenaca.gov]
 match = -69.6%%
@@ -127,9 +127,9 @@ title = Teaching Korean basics to @Nisqy I hope it helps 😈 @SK ...
 url = https://www.tiktok.com/@laurebuliiv/video/7378201658527911176
 
 [30rates.com]
-match = -39.1%%
-title = RIOT STOCK PRICE FORECAST TOMORROW, WEEK ...
-url = https://30rates.com/riot-stock
+match = -52.2%%
+title = OIL PRICE FORECAST FOR TOMORROW, WEEK, MONTH
+url = https://30rates.com/oil-price-forecast-and-predictions
 
 [www.google.com]
 match = 0.0%%
