CI images update

--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-08-05 12:40:34
+lastsearch = 2024-08-05 13:22:02
 
 [shopee.vn]
 match = 25.0%%
@@ -380,4 +380,14 @@ url = https://issuu.com/nadaoffner/docs/tay_ho_times_november_2016
 match = -181.2%%
 title = VinFast Theon S: Latest Specifications and Offers 2024
 url = https://shop.vinfastauto.com/vn_en/xe-may-dien-theon-s.html
+
+[xaydungchinhsach.chinhphu.vn]
+match = -200.0%%
+title = TOÀN VĂN: Quyết định phê duyệt Quy hoạch tỉnh Bình Dương
+url = https://xaydungchinhsach.chinhphu.vn/toan-van-quyet-dinh-phe-duyet-quy-hoach-tinh-binh-duong-119240805120723574.htm
+
+[thoibaotaichinhvietnam.vn]
+match = -206.2%%
+title = Cảnh báo chiêu trò lừa đảo bán thuốc đặc trị trên mạng xã ...
+url = https://thoibaotaichinhvietnam.vn/canh-bao-chieu-tro-lua-dao-ban-thuoc-dac-tri-tren-mang-xa-hoi-156442.html
 
