--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-05 02:38:36
+lastsearch = 2024-08-05 13:26:49
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = BỊ THU HỒI THẺ XANH KHI NHẬP CẢNH TRỞ LẠI MỸ và ...
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -271.4%%
-title = 10 (1979) Movie Trailer - Dudley Moore, Bo Derek, Julie ...
-url = https://www.youtube.com/watch?v=au0Pp_9oQbo
+match = -200.0%%
+title = FIX: VIDEO DXGKRNL FATAL ERROR in Windows 10/11 ...
+url = https://www.youtube.com/watch?v=7yEnuxJqQKg
 
 [www.reddit.com]
 match = -64.3%%
@@ -460,4 +460,9 @@ url = https://www.wego.vn/lich-bay/grb/man/chuyen-bay-re-nhat-tu-green-bay-den-m
 match = 0.0%%
 title = Jordan Retro 10 Shoes
 url = https://www.footlocker.com/category/shoes/jordan/retro-10.html
+
+[www.godigit.com]
+match = 0.0%%
+title = 
+url = https://www.godigit.com/international-travel-insurance/citizenship/how-to-get-pr-in-usa
 
