--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-05 12:47:38
+lastsearch = 2024-08-05 13:23:22
 
 [everonvn.com.vn]
-match = 7.4%%
-title = Bộ Artemis Tk Giảm Giá - Everon
-url = https://everonvn.com.vn/everon/1915/bo-artemis-tk-giam-gia?srsltid=AfmBOoqb5nl5-vHWdt5gUJMDxU4dk2U-TTRwQ30l93zTReFtX4Yagoso
+match = -74.1%%
+title = Bảng giá bán bộ chăn ga gối Hàn Quốc Everon Epc-19041 in ...
+url = https://everonvn.com.vn/everon/750/bo-everon-epc-19041
 
 [everon.com.vn]
 match = 40.0%%
 title = BỘ EVERON EPM 19064 Modal
-url = https://everon.com.vn/epm-19064/?srsltid=AfmBOorqEx06zMCakcycHI_VCRPy3LzBIYVay6xhPeFHGpxx_w78pX5p
+url = https://everon.com.vn/epm-19064/
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOoo9kh3a6rnIDpoeMGWrPesJdxyclrn6GQlw76ibw93hxZZeomYG
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
 
 [shopee.vn]
 match = -48.1%%
