--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-08-05 12:46:43
+lastsearch = 2024-08-05 13:33:30
 
 [www.diepxuan.com]
 match = 4.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun My Youth - MY18
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [www.lazada.vn]
-match = -59.1%%
-title = Chăn ga gối Nỉ COCO hàng loại 1 siêu mềm mượt, ...
-url = https://www.lazada.vn/products/chan-ga-goi-ni-coco-hang-loai-1-sieu-mem-muot-chan-4kg-cuc-am-mua-thu-dong-i2492985749-s12208197211.html?from_gmc=1&fl_tag=1
+match = 27.3%%
+title = Ga gối chun nỉ COCO KHÔNG VIỀN
+url = https://www.lazada.vn/products/ga-goi-chun-ni-coco-khong-vien-i2477643141.html
 
 [www.instagram.com]
 match = -77.3%%
