--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-05 11:45:37
+lastsearch = 2024-08-05 13:33:10
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -153,8 +153,8 @@ url = https://u.gg/lol/profile/vn2/dariusmaster-vn2/overview
 
 [shopee.vn]
 match = -100.0%%
-title = adz giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=.adz
+title = aDz giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=aDz
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -162,9 +162,9 @@ title = Sơ đồ nhà ga - Tổng công ty cảng hàng không Việt ...
 url = https://www.vietnamairport.vn/tansonnhatairport/tin-tuc/thong-tin-dich-vu/so-do-nha-ga-2
 
 [bocongan.gov.vn]
-match = -226.7%%
-title = Giao lưu bóng đá giữa Câu lạc bộ Công an Hà Nội và Đội ...
-url = https://bocongan.gov.vn/tin-hoat-dong-cua-bo/giao-luu-bong-da-giua-cau-lac-bo-cong-an-ha-noi-va-doi-bong-cuu-danh-thu-brazil-d2-t38831.html
+match = -200.0%%
+title = Chủ tịch nước Tô Lâm dự Ngày hội toàn dân bảo vệ an ...
+url = https://bocongan.gov.vn/tin-tuc-su-kien/hoat-dong-cua-luc-luong-cong-an/tin-hoat-dong-cua-bo/chu-tich-nuoc-to-lam-du-ngay-hoi-toan-dan-bao-ve-an-ninh-to-quoc-tai-phuong-cua-dong-thanh-pho-ha-noi-d2-t40539.html
 
 [hcmyu.hpu2.edu.vn]
 match = -253.3%%
@@ -309,7 +309,7 @@ url = https://diaoc24gio.com/du-an/quan-2-khu-dan-cu-d2-eight-capital-land
 [concung.com]
 match = -220.0%%
 title = Ba lô chống lạc bé gái Princess DHF19017-D2 (Hồng) giá tốt
-url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html
+url = https://concung.com/thoi-trang-tre-em/ba-lo-chong-lac-be-gai-princess-dhf19017-d2-hong-61528.html?srsltid=AfmBOopUzmSllTrzb7J_acM2OKpnwC_L7V-e9rR_c3AHJ7BVkWGM7sLl
 
 [tuyensinh247.com]
 match = -220.0%%
