--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-08-05 12:16:50
+lastsearch = 2024-08-05 13:18:15
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,8 +17,8 @@ title = Fwb&Ons_vn
 url = https://www.facebook.com/groups/fovnpublic/?locale=sw_KE
 
 [voz.vn]
-match = -293.3%%
-title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trước ô tô? | Page 5
+match = -233.3%%
+title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trước ô tô?
 url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
