--- a/images/tui-singapore-150x190x09/config.ini
+++ b/images/tui-singapore-150x190x09/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-singapore-150x190x09.html
 lastopen = 2024-06-17 10:41:24
 
 [search]
-lastsearch = 2024-08-05 12:56:56
+lastsearch = 2024-08-05 13:18:38
 
 [www.diepxuan.com]
 match = 5.3%%
@@ -13,7 +13,7 @@ url = https://www.diepxuan.com/nem-bong/tui-nem.html
 
 [www.tui.co.uk]
 match = -58.3%%
-title = Where We Fly | Flights with TUI 2024 / 2025
+title = Where We Fly | Flights with TUI 2024 / ...
 url = https://www.tui.co.uk/flight/where-we-fly
 
 [www.seatrade-cruise.com]
